@@ -24,11 +24,12 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.LinkedHashSet;
 import java.util.List;
-import java.util.Objects;
 import java.util.PriorityQueue;
 import java.util.Set;
 import java.util.TreeSet;
-import java.util.stream.Collectors;
+import java.util.function.Consumer;
+import java.util.function.IntPredicate;
+import org.apache.lucene.util.CharsRef;
 import org.apache.lucene.util.IntsRef;
 import org.apache.lucene.util.fst.FST;
 
@@ -43,13 +44,15 @@ class GeneratingSuggester {
   private static final int MAX_ROOT_LENGTH_DIFF = 4;
   private final Dictionary dictionary;
   private final Hunspell speller;
+  private final SuggestibleEntryCache entryCache;
 
-  GeneratingSuggester(Hunspell speller) {
+  GeneratingSuggester(Hunspell speller, SuggestibleEntryCache entryCache) {
     this.dictionary = speller.dictionary;
     this.speller = speller;
+    this.entryCache = entryCache;
   }
 
-  List<String> suggest(String word, WordCase originalCase, Set<String> prevSuggestions) {
+  List<String> suggest(String word, WordCase originalCase, Set<Suggestion> prevSuggestions) {
     List<Weighted<Root<String>>> roots = findSimilarDictionaryEntries(word, originalCase);
     List<Weighted<String>> expanded = expandRoots(word, roots);
     TreeSet<Weighted<String>> bySimilarity = rankBySimilarity(word, expanded);
@@ -58,61 +61,63 @@ class GeneratingSuggester {
 
   private List<Weighted<Root<String>>> findSimilarDictionaryEntries(
       String word, WordCase originalCase) {
-    Comparator<Weighted<Root<String>>> natural = Comparator.naturalOrder();
-    PriorityQueue<Weighted<Root<String>>> roots = new PriorityQueue<>(natural.reversed());
-    List<Root<String>> entries = new ArrayList<>();
+    PriorityQueue<Weighted<Root<String>>> roots = new PriorityQueue<>(Comparator.reverseOrder());
+
+    char[] excludeFlags = dictionary.allNonSuggestibleFlags();
+    FlagEnumerator.Lookup flagLookup = dictionary.flagLookup;
+    IntPredicate isSuggestible = formId -> !flagLookup.hasAnyFlag(formId, excludeFlags);
+
     boolean ignoreTitleCaseRoots = originalCase == WordCase.LOWER && !dictionary.hasLanguage("de");
     TrigramAutomaton automaton = new TrigramAutomaton(word);
 
-    dictionary.words.processAllWords(
-        word.length() + 4,
-        (rootChars, forms) -> {
+    processSuggestibleWords(
+        Math.max(1, word.length() - MAX_ROOT_LENGTH_DIFF),
+        word.length() + MAX_ROOT_LENGTH_DIFF,
+        (entry) -> {
+          if (ignoreTitleCaseRoots && entry.hasTitleCase()) {
+            return;
+          }
+
+          int sc = automaton.ngramScore(entry.lowerCaseRoot());
+          if (sc == 0) {
+            return; // no common characters at all, don't suggest this root
+          }
+
+          CharsRef rootChars = entry.root();
+          sc += commonPrefix(word, rootChars) - longerWorsePenalty(word.length(), rootChars.length);
+
+          if (roots.size() == MAX_ROOTS && isWorseThan(sc, rootChars, roots.peek())) {
+            return;
+          }
+
           speller.checkCanceled.run();
 
-          assert rootChars.length > 0;
-          if (Math.abs(rootChars.length - word.length()) > MAX_ROOT_LENGTH_DIFF) {
-            assert rootChars.length < word.length(); // processAllWords takes care of longer keys
-            return;
-          }
-
           String root = rootChars.toString();
-          filterSuitableEntries(root, forms, entries);
-          if (entries.isEmpty()) return;
-
-          if (ignoreTitleCaseRoots && WordCase.caseOf(rootChars) == WordCase.TITLE) {
-            return;
-          }
-
-          String lower = dictionary.toLowerCase(root);
-          int sc =
-              automaton.ngramScore(lower)
-                  - longerWorsePenalty(word, lower)
-                  + commonPrefix(word, root);
-
-          if (roots.size() == MAX_ROOTS && sc < roots.peek().score) {
-            return;
-          }
-
-          entries.forEach(e -> roots.add(new Weighted<>(e, sc)));
-          while (roots.size() > MAX_ROOTS) {
-            roots.poll();
+          IntsRef forms = entry.forms();
+          for (int i = 0; i < forms.length; i++) {
+            if (isSuggestible.test(forms.ints[forms.offset + i])) {
+              roots.add(new Weighted<>(new Root<>(root, forms.ints[forms.offset + i]), sc));
+              if (roots.size() == MAX_ROOTS) {
+                roots.poll();
+              }
+            }
           }
         });
 
-    return roots.stream().sorted().collect(Collectors.toList());
+    return roots.stream().sorted().toList();
   }
 
-  private void filterSuitableEntries(String word, IntsRef forms, List<Root<String>> result) {
-    result.clear();
-    for (int i = 0; i < forms.length; i += dictionary.formStep()) {
-      int entryId = forms.ints[forms.offset + i];
-      if (dictionary.hasFlag(entryId, dictionary.forbiddenword)
-          || dictionary.hasFlag(entryId, dictionary.noSuggest)
-          || dictionary.hasFlag(entryId, Dictionary.HIDDEN_FLAG)
-          || dictionary.hasFlag(entryId, dictionary.onlyincompound)) {
-        continue;
-      }
-      result.add(new Root<>(word, entryId));
+  private static boolean isWorseThan(int score, CharsRef candidate, Weighted<Root<String>> root) {
+    return score < root.score
+        || score == root.score && CharSequence.compare(candidate, root.word.word()) > 0;
+  }
+
+  private void processSuggestibleWords(
+      int minLength, int maxLength, Consumer<FlyweightEntry> processor) {
+    if (entryCache != null) {
+      entryCache.processSuggestibleWords(minLength, maxLength, processor);
+    } else {
+      dictionary.words.processSuggestibleWords(minLength, maxLength, processor);
     }
   }
 
@@ -132,7 +137,7 @@ class GeneratingSuggester {
         }
       }
     }
-    return expanded.stream().limit(MAX_GUESSES).collect(Collectors.toList());
+    return expanded.stream().limit(MAX_GUESSES).toList();
   }
 
   // find minimum threshold for a passable suggestion
@@ -155,11 +160,11 @@ class GeneratingSuggester {
     List<char[]> crossProducts = new ArrayList<>();
     Set<String> result = new LinkedHashSet<>();
 
-    if (!dictionary.hasFlag(root.entryId, dictionary.needaffix)) {
-      result.add(root.word);
+    if (!dictionary.hasFlag(root.entryId(), dictionary.needaffix)) {
+      result.add(root.word());
     }
 
-    char[] wordChars = root.word.toCharArray();
+    char[] wordChars = root.word().toCharArray();
 
     // suffixes
     processAffixes(
@@ -173,7 +178,7 @@ class GeneratingSuggester {
           }
 
           String suffix = misspelled.substring(misspelled.length() - suffixLength);
-          String withSuffix = root.word.substring(0, root.word.length() - stripLength) + suffix;
+          String withSuffix = root.word().substring(0, root.word().length() - stripLength) + suffix;
           result.add(withSuffix);
           if (dictionary.isCrossProduct(suffixId)) {
             crossProducts.add(withSuffix.toCharArray());
@@ -185,7 +190,7 @@ class GeneratingSuggester {
         true,
         misspelled,
         (prefixLength, prefixId) -> {
-          if (!dictionary.hasFlag(root.entryId, dictionary.affixData(prefixId, AFFIX_FLAG))
+          if (!dictionary.hasFlag(root.entryId(), dictionary.affixData(prefixId, AFFIX_FLAG))
               || !dictionary.isCrossProduct(prefixId)) {
             return;
           }
@@ -210,11 +215,11 @@ class GeneratingSuggester {
           if (hasCompatibleFlags(root, prefixId)
               && checkAffixCondition(prefixId, wordChars, stripLength, stemLength)) {
             String prefix = misspelled.substring(0, prefixLength);
-            result.add(prefix + root.word.substring(stripLength));
+            result.add(prefix + root.word().substring(stripLength));
           }
         });
 
-    return result.stream().limit(MAX_WORDS).collect(Collectors.toList());
+    return result.stream().limit(MAX_WORDS).toList();
   }
 
   private void processAffixes(boolean prefixes, String word, AffixProcessor processor) {
@@ -256,7 +261,7 @@ class GeneratingSuggester {
   }
 
   private boolean hasCompatibleFlags(Root<?> root, int affixId) {
-    if (!dictionary.hasFlag(root.entryId, dictionary.affixData(affixId, AFFIX_FLAG))) {
+    if (!dictionary.hasFlag(root.entryId(), dictionary.affixData(affixId, AFFIX_FLAG))) {
       return false;
     }
 
@@ -304,7 +309,7 @@ class GeneratingSuggester {
   }
 
   private List<String> getMostRelevantSuggestions(
-      TreeSet<Weighted<String>> bySimilarity, Set<String> prevSuggestions) {
+      TreeSet<Weighted<String>> bySimilarity, Set<Suggestion> prevSuggestions) {
     List<String> result = new ArrayList<>();
     boolean hasExcellent = false;
     for (Weighted<String> weighted : bySimilarity) {
@@ -320,7 +325,7 @@ class GeneratingSuggester {
         break;
       }
 
-      if (prevSuggestions.stream().noneMatch(weighted.word::contains)
+      if (prevSuggestions.stream().noneMatch(s -> weighted.word.contains(s.raw))
           && result.stream().noneMatch(weighted.word::contains)
           && speller.checkWord(weighted.word)) {
         result.add(weighted.word);
@@ -336,7 +341,7 @@ class GeneratingSuggester {
     return result;
   }
 
-  static int commonPrefix(String s1, String s2) {
+  static int commonPrefix(CharSequence s1, CharSequence s2) {
     int i = 0;
     int limit = Math.min(s1.length(), s2.length());
     while (i < limit && s1.charAt(i) == s2.charAt(i)) {
@@ -377,8 +382,8 @@ class GeneratingSuggester {
   }
 
   // NGRAM_LONGER_WORSE flag in Hunspell
-  private static int longerWorsePenalty(String s1, String s2) {
-    return Math.max((s2.length() - s1.length()) - 2, 0);
+  private static int longerWorsePenalty(int length1, int length2) {
+    return Math.max((length2 - length1) - 2, 0);
   }
 
   // NGRAM_ANY_MISMATCH flag in Hunspell
@@ -440,28 +445,8 @@ class GeneratingSuggester {
     return commonScore;
   }
 
-  private static class Weighted<T extends Comparable<T>> implements Comparable<Weighted<T>> {
-    final T word;
-    final int score;
-
-    Weighted(T word, int score) {
-      this.word = word;
-      this.score = score;
-    }
-
-    @Override
-    public boolean equals(Object o) {
-      if (this == o) return true;
-      if (!(o instanceof Weighted)) return false;
-      @SuppressWarnings("unchecked")
-      Weighted<T> that = (Weighted<T>) o;
-      return score == that.score && word.equals(that.word);
-    }
-
-    @Override
-    public int hashCode() {
-      return Objects.hash(word, score);
-    }
+  private record Weighted<T extends Comparable<T>>(T word, int score)
+      implements Comparable<Weighted<T>> {
 
     @Override
     public String toString() {
