@@ -16,6 +16,9 @@
  */
 package org.apache.lucene.index;
 
+import static java.nio.charset.StandardCharsets.UTF_8;
+import static org.apache.lucene.tests.index.DocHelper.TEXT_TYPE_STORED_WITH_TVS;
+
 import com.carrotsearch.randomizedtesting.generators.RandomPicks;
 import java.io.ByteArrayOutputStream;
 import java.io.Closeable;
@@ -25,8 +28,6 @@ import java.io.PrintStream;
 import java.io.PrintWriter;
 import java.io.StringReader;
 import java.io.StringWriter;
-import java.net.URI;
-import java.nio.file.FileSystem;
 import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
@@ -41,19 +42,16 @@ import java.util.Map;
 import java.util.Random;
 import java.util.Set;
 import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.RejectedExecutionException;
 import java.util.concurrent.Semaphore;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Predicate;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import org.apache.lucene.analysis.Analyzer;
-import org.apache.lucene.analysis.CannedTokenStream;
-import org.apache.lucene.analysis.MockAnalyzer;
-import org.apache.lucene.analysis.MockTokenFilter;
-import org.apache.lucene.analysis.MockTokenizer;
-import org.apache.lucene.analysis.Token;
 import org.apache.lucene.analysis.TokenStream;
 import org.apache.lucene.analysis.Tokenizer;
 import org.apache.lucene.analysis.tokenattributes.CharTermAttribute;
@@ -73,9 +71,6 @@ import org.apache.lucene.document.StoredField;
 import org.apache.lucene.document.StringField;
 import org.apache.lucene.document.TextField;
 import org.apache.lucene.index.IndexWriterConfig.OpenMode;
-import org.apache.lucene.mockfile.ExtrasFS;
-import org.apache.lucene.mockfile.FilterPath;
-import org.apache.lucene.mockfile.WindowsFS;
 import org.apache.lucene.search.DocIdSetIterator;
 import org.apache.lucene.search.IndexSearcher;
 import org.apache.lucene.search.MatchAllDocsQuery;
@@ -86,7 +81,6 @@ import org.apache.lucene.search.SearcherManager;
 import org.apache.lucene.search.TermQuery;
 import org.apache.lucene.search.TopDocs;
 import org.apache.lucene.store.AlreadyClosedException;
-import org.apache.lucene.store.BaseDirectoryWrapper;
 import org.apache.lucene.store.ByteBuffersDirectory;
 import org.apache.lucene.store.Directory;
 import org.apache.lucene.store.FSDirectory;
@@ -96,27 +90,37 @@ import org.apache.lucene.store.IndexInput;
 import org.apache.lucene.store.IndexOutput;
 import org.apache.lucene.store.LockObtainFailedException;
 import org.apache.lucene.store.MMapDirectory;
-import org.apache.lucene.store.MockDirectoryWrapper;
 import org.apache.lucene.store.NIOFSDirectory;
 import org.apache.lucene.store.NoLockFactory;
 import org.apache.lucene.store.SimpleFSLockFactory;
+import org.apache.lucene.tests.analysis.CannedTokenStream;
+import org.apache.lucene.tests.analysis.MockAnalyzer;
+import org.apache.lucene.tests.analysis.MockTokenFilter;
+import org.apache.lucene.tests.analysis.MockTokenizer;
+import org.apache.lucene.tests.analysis.Token;
+import org.apache.lucene.tests.index.RandomIndexWriter;
+import org.apache.lucene.tests.index.SuppressingConcurrentMergeScheduler;
+import org.apache.lucene.tests.mockfile.ExtrasFS;
+import org.apache.lucene.tests.mockfile.WindowsFS;
+import org.apache.lucene.tests.store.BaseDirectoryWrapper;
+import org.apache.lucene.tests.store.MockDirectoryWrapper;
+import org.apache.lucene.tests.util.LuceneTestCase;
+import org.apache.lucene.tests.util.TestUtil;
 import org.apache.lucene.util.Bits;
 import org.apache.lucene.util.BytesRef;
 import org.apache.lucene.util.Constants;
 import org.apache.lucene.util.IOSupplier;
 import org.apache.lucene.util.IOUtils;
 import org.apache.lucene.util.InfoStream;
-import org.apache.lucene.util.LuceneTestCase;
 import org.apache.lucene.util.SetOnce;
 import org.apache.lucene.util.StringHelper;
-import org.apache.lucene.util.TestUtil;
+import org.apache.lucene.util.SuppressForbidden;
 import org.apache.lucene.util.ThreadInterruptedException;
 import org.apache.lucene.util.Version;
 import org.apache.lucene.util.automaton.Automata;
 import org.apache.lucene.util.automaton.Automaton;
 import org.apache.lucene.util.automaton.CharacterRunAutomaton;
 import org.junit.Ignore;
-import org.junit.Test;
 
 public class TestIndexWriter extends LuceneTestCase {
 
@@ -125,14 +129,13 @@ public class TestIndexWriter extends LuceneTestCase {
   public void testDocCount() throws IOException {
     Directory dir = newDirectory();
 
-    IndexWriter writer = null;
-    IndexReader reader = null;
-    int i;
+    IndexWriter writer;
+    IndexReader reader;
 
     writer = new IndexWriter(dir, newIndexWriterConfig(new MockAnalyzer(random())));
 
     // add 100 documents
-    for (i = 0; i < 100; i++) {
+    for (int i = 0; i < 100; i++) {
       addDocWithIndex(writer, i);
       if (random().nextBoolean()) {
         writer.commit();
@@ -157,7 +160,7 @@ public class TestIndexWriter extends LuceneTestCase {
                       }
                     }));
 
-    for (i = 0; i < 40; i++) {
+    for (int i = 0; i < 40; i++) {
       writer.deleteDocuments(new Term("id", "" + i));
       if (random().nextBoolean()) {
         writer.commit();
@@ -188,8 +191,7 @@ public class TestIndexWriter extends LuceneTestCase {
     assertEquals(60, reader.numDocs());
     reader.close();
 
-    // make sure opening a new index for create over
-    // this existing one works correctly:
+    // make sure opening a new index for create over this existing one works correctly:
     writer =
         new IndexWriter(
             dir, newIndexWriterConfig(new MockAnalyzer(random())).setOpenMode(OpenMode.CREATE));
@@ -214,8 +216,7 @@ public class TestIndexWriter extends LuceneTestCase {
   }
 
   // TODO: we have the logic in MDW to do this check, and it's better, because it knows about files
-  // it tried
-  // to delete but couldn't: we should replace this!!!!
+  //   it tried to delete but couldn't: we should replace this!!!!
   public static void assertNoUnreferencedFiles(Directory dir, String message) throws IOException {
     String[] startFiles = dir.listAll();
     new IndexWriter(dir, new IndexWriterConfig(new MockAnalyzer(random()))).rollback();
@@ -228,26 +229,14 @@ public class TestIndexWriter extends LuceneTestCase {
       fail(
           message
               + ": before delete:\n    "
-              + arrayToString(startFiles)
+              + String.join("\n    ", startFiles)
               + "\n  after delete:\n    "
-              + arrayToString(endFiles));
+              + String.join("\n    ", endFiles));
     }
-  }
-
-  static String arrayToString(String[] l) {
-    String s = "";
-    for (int i = 0; i < l.length; i++) {
-      if (i > 0) {
-        s += "\n    ";
-      }
-      s += l[i];
-    }
-    return s;
   }
 
   // Make sure we can open an index for create even when a
-  // reader holds it open (this fails pre lock-less
-  // commits on windows):
+  // reader holds it open (this fails pre lock-less commits on Windows):
   public void testCreateWithReader() throws IOException {
     Directory dir = newDirectory();
 
@@ -285,11 +274,7 @@ public class TestIndexWriter extends LuceneTestCase {
 
     // close
     writer.close();
-    expectThrows(
-        AlreadyClosedException.class,
-        () -> {
-          addDoc(writer);
-        });
+    expectThrows(AlreadyClosedException.class, () -> addDoc(writer));
 
     dir.close();
   }
@@ -331,8 +316,7 @@ public class TestIndexWriter extends LuceneTestCase {
       Document doc = new Document();
       doc.add(newField("field", "aaa" + j, storedTextType));
       writer.addDocument(doc);
-      // Verify that with a tiny RAM buffer we see new
-      // segment after every doc
+      // Verify that with a tiny RAM buffer we see new segment after every doc
       int numSegments = getSegmentCount(dir);
       assertTrue(numSegments > lastNumSegments);
       lastNumSegments = numSegments;
@@ -351,8 +335,7 @@ public class TestIndexWriter extends LuceneTestCase {
     return segments.size();
   }
 
-  // Make sure it's OK to change RAM buffer size and
-  // maxBufferedDocs in a write session
+  // Make sure it's OK to change RAM buffer size and maxBufferedDocs in a write session
   public void testChangingRAMBuffer() throws IOException {
     Directory dir = newDirectory();
     IndexWriter writer = new IndexWriter(dir, newIndexWriterConfig(new MockAnalyzer(random())));
@@ -416,7 +399,7 @@ public class TestIndexWriter extends LuceneTestCase {
     customType.setOmitNorms(true);
     for (int j = 0; j < 10; j++) {
       Document doc = new Document();
-      Field f = null;
+      Field f;
       if (j != 8) {
         f = newField("field", "aaa", customType);
       } else {
@@ -444,7 +427,7 @@ public class TestIndexWriter extends LuceneTestCase {
     // Enable norms for only 1 doc, post flush
     for (int j = 0; j < 27; j++) {
       Document doc = new Document();
-      Field f = null;
+      Field f;
       if (j != 26) {
         f = newField("field", "aaa", customType);
       } else {
@@ -494,7 +477,7 @@ public class TestIndexWriter extends LuceneTestCase {
     Term t = new Term("field", "a");
     assertEquals(1, reader.docFreq(t));
     PostingsEnum td =
-        TestUtil.docs(random(), reader, "field", new BytesRef("a"), null, PostingsEnum.FREQS);
+        TestUtil.docs(random(), reader, "field", newBytesRef("a"), null, PostingsEnum.FREQS);
     td.nextDoc();
     assertEquals(128 * 1024, td.freq());
     reader.close();
@@ -517,16 +500,13 @@ public class TestIndexWriter extends LuceneTestCase {
     doc.add(newField("field", "aaa", customType));
     for (int i = 0; i < 19; i++) writer.addDocument(doc);
     writer.flush(false, true);
+    // Since we flushed w/o allowing merging we should now have 10 segments
+    assertEquals(10, writer.getSegmentCount());
     writer.close();
-    SegmentInfos sis = SegmentInfos.readLatestCommit(dir);
-    // Since we flushed w/o allowing merging we should now
-    // have 10 segments
-    assertEquals(10, sis.size());
     dir.close();
   }
 
-  // Make sure we can flush segment w/ norms, then add
-  // empty doc (no norms) and flush
+  // Make sure we can flush segment w/ norms, then add empty doc (no norms) and flush
   public void testEmptyDocAfterFlushingRealDoc() throws IOException {
     Directory dir = newDirectory();
     IndexWriter writer = new IndexWriter(dir, newIndexWriterConfig(new MockAnalyzer(random())));
@@ -609,15 +589,17 @@ public class TestIndexWriter extends LuceneTestCase {
       String contents = "aa bb cc dd ee ff gg hh ii jj kk";
 
       FieldType customType = new FieldType(TextField.TYPE_STORED);
-      FieldType type = null;
       if (i == 7) {
         // Add empty docs here
         doc.add(newTextField("content3", "", Field.Store.NO));
       } else {
+        FieldType type;
         if (i % 2 == 0) {
           doc.add(newField("content4", contents, customType));
           type = customType;
-        } else type = TextField.TYPE_NOT_STORED;
+        } else {
+          type = TextField.TYPE_NOT_STORED;
+        }
         doc.add(newTextField("content1", contents, Field.Store.NO));
         doc.add(newField("content3", "", customType));
         doc.add(newField("content5", "", type));
@@ -645,10 +627,7 @@ public class TestIndexWriter extends LuceneTestCase {
     IndexWriter writer = new IndexWriter(dir, newIndexWriterConfig(new MockAnalyzer(random())));
 
     Document doc = new Document();
-    StringBuilder b = new StringBuilder();
-    for (int i = 0; i < 10000; i++) b.append(" a");
-    b.append(" x");
-    doc.add(newTextField("field", b.toString(), Field.Store.NO));
+    doc.add(newTextField("field", " a".repeat(10_000) + " x", Field.Store.NO));
     writer.addDocument(doc);
     writer.close();
 
@@ -680,9 +659,9 @@ public class TestIndexWriter extends LuceneTestCase {
     DirectoryReader reader = DirectoryReader.open(dir);
     LeafReader subreader = getOnlyLeafReader(reader);
     TermsEnum te = subreader.terms("").iterator();
-    assertEquals(new BytesRef("a"), te.next());
-    assertEquals(new BytesRef("b"), te.next());
-    assertEquals(new BytesRef("c"), te.next());
+    assertEquals(newBytesRef("a"), te.next());
+    assertEquals(newBytesRef("b"), te.next());
+    assertEquals(newBytesRef("c"), te.next());
     assertNull(te.next());
     reader.close();
     dir.close();
@@ -701,10 +680,10 @@ public class TestIndexWriter extends LuceneTestCase {
     DirectoryReader reader = DirectoryReader.open(dir);
     LeafReader subreader = getOnlyLeafReader(reader);
     TermsEnum te = subreader.terms("").iterator();
-    assertEquals(new BytesRef(""), te.next());
-    assertEquals(new BytesRef("a"), te.next());
-    assertEquals(new BytesRef("b"), te.next());
-    assertEquals(new BytesRef("c"), te.next());
+    assertEquals(newBytesRef(""), te.next());
+    assertEquals(newBytesRef("a"), te.next());
+    assertEquals(newBytesRef("b"), te.next());
+    assertEquals(newBytesRef("c"), te.next());
     assertNull(te.next());
     reader.close();
     dir.close();
@@ -782,11 +761,7 @@ public class TestIndexWriter extends LuceneTestCase {
     IndexWriter w = new IndexWriter(dir, newIndexWriterConfig(new MockAnalyzer(random())));
     Document doc = new Document();
     doc.add(new TextField("field", tokens));
-    expectThrows(
-        IllegalArgumentException.class,
-        () -> {
-          w.addDocument(doc);
-        });
+    expectThrows(IllegalArgumentException.class, () -> w.addDocument(doc));
 
     w.close();
     dir.close();
@@ -810,7 +785,7 @@ public class TestIndexWriter extends LuceneTestCase {
     w.close();
 
     IndexReader r = DirectoryReader.open(dir);
-    Terms tpv = r.getTermVectors(0).terms("field");
+    Terms tpv = r.termVectors().get(0).terms("field");
     TermsEnum termsEnum = tpv.iterator();
     assertNotNull(termsEnum.next());
     PostingsEnum dpEnum = termsEnum.postings(null, PostingsEnum.ALL);
@@ -869,7 +844,7 @@ public class TestIndexWriter extends LuceneTestCase {
     dir.close();
   }
 
-  private class IndexerThreadInterrupt extends Thread {
+  private static class IndexerThreadInterrupt extends Thread {
     volatile boolean failed;
     volatile boolean finish;
 
@@ -877,7 +852,7 @@ public class TestIndexWriter extends LuceneTestCase {
     final Random random;
     final Directory adder;
     final ByteArrayOutputStream bytesLog = new ByteArrayOutputStream();
-    final PrintStream log = new PrintStream(bytesLog, true, IOUtils.UTF_8);
+    final PrintStream log = new PrintStream(bytesLog, true, UTF_8);
     final int id;
 
     IndexerThreadInterrupt(int id) throws IOException {
@@ -902,22 +877,22 @@ public class TestIndexWriter extends LuceneTestCase {
       Document doc = new Document();
       doc.add(newStringField(random, "id", "500", Field.Store.NO));
       doc.add(newField(random, "field", "some prepackaged text contents", storedTextType));
-      doc.add(new BinaryDocValuesField("binarydv", new BytesRef("500")));
+      doc.add(new BinaryDocValuesField("binarydv", newBytesRef("500")));
       doc.add(new NumericDocValuesField("numericdv", 500));
-      doc.add(new SortedDocValuesField("sorteddv", new BytesRef("500")));
-      doc.add(new SortedSetDocValuesField("sortedsetdv", new BytesRef("one")));
-      doc.add(new SortedSetDocValuesField("sortedsetdv", new BytesRef("two")));
+      doc.add(new SortedDocValuesField("sorteddv", newBytesRef("500")));
+      doc.add(new SortedSetDocValuesField("sortedsetdv", newBytesRef("one")));
+      doc.add(new SortedSetDocValuesField("sortedsetdv", newBytesRef("two")));
       doc.add(new SortedNumericDocValuesField("sortednumericdv", 4));
       doc.add(new SortedNumericDocValuesField("sortednumericdv", 3));
       w.addDocument(doc);
       doc = new Document();
       doc.add(newStringField(random, "id", "501", Field.Store.NO));
       doc.add(newField(random, "field", "some more contents", storedTextType));
-      doc.add(new BinaryDocValuesField("binarydv", new BytesRef("501")));
+      doc.add(new BinaryDocValuesField("binarydv", newBytesRef("501")));
       doc.add(new NumericDocValuesField("numericdv", 501));
-      doc.add(new SortedDocValuesField("sorteddv", new BytesRef("501")));
-      doc.add(new SortedSetDocValuesField("sortedsetdv", new BytesRef("two")));
-      doc.add(new SortedSetDocValuesField("sortedsetdv", new BytesRef("three")));
+      doc.add(new SortedDocValuesField("sorteddv", newBytesRef("501")));
+      doc.add(new SortedSetDocValuesField("sortedsetdv", newBytesRef("two")));
+      doc.add(new SortedSetDocValuesField("sortedsetdv", newBytesRef("three")));
       doc.add(new SortedNumericDocValuesField("sortednumericdv", 6));
       doc.add(new SortedNumericDocValuesField("sortednumericdv", 1));
       w.addDocument(doc);
@@ -942,15 +917,15 @@ public class TestIndexWriter extends LuceneTestCase {
 
           while (!finish) {
             if (w != null) {
-              // If interrupt arrives inside here, it's
-              // fine: we will cycle back and the first
-              // thing we do is try to close again,
-              // i.e. we'll never try to open a new writer
-              // until this one successfully closes:
+              // If interrupt arrives inside here, it's fine: we will cycle back
+              // and the first thing we do is try to close again,
+              // i.e. we'll never try to open a new writer until this one successfully closes:
               // w.rollback();
               try {
                 w.close();
-              } catch (AlreadyClosedException ace) {
+              } catch (
+                  @SuppressWarnings("unused")
+                  AlreadyClosedException ace) {
                 // OK
               }
               w = null;
@@ -963,6 +938,7 @@ public class TestIndexWriter extends LuceneTestCase {
                     @Override
                     protected boolean isOK(Throwable th) {
                       return th instanceof AlreadyClosedException
+                          || th instanceof RejectedExecutionException
                           || (th instanceof IllegalStateException
                               && th.getMessage()
                                   .contains("this writer hit an unrecoverable error"));
@@ -974,10 +950,10 @@ public class TestIndexWriter extends LuceneTestCase {
 
             Document doc = new Document();
             Field idField = newStringField(random, "id", "", Field.Store.NO);
-            Field binaryDVField = new BinaryDocValuesField("binarydv", new BytesRef());
+            Field binaryDVField = new BinaryDocValuesField("binarydv", newBytesRef());
             Field numericDVField = new NumericDocValuesField("numericdv", 0);
-            Field sortedDVField = new SortedDocValuesField("sorteddv", new BytesRef());
-            Field sortedSetDVField = new SortedSetDocValuesField("sortedsetdv", new BytesRef());
+            Field sortedDVField = new SortedDocValuesField("sorteddv", newBytesRef());
+            Field sortedSetDVField = new SortedSetDocValuesField("sortedsetdv", newBytesRef());
             doc.add(idField);
             doc.add(newField(random, "field", "some text contents", storedTextType));
             doc.add(binaryDVField);
@@ -987,10 +963,10 @@ public class TestIndexWriter extends LuceneTestCase {
             for (int i = 0; i < 100; i++) {
               // log.println("\nTEST: i=" + i);
               idField.setStringValue(Integer.toString(i));
-              binaryDVField.setBytesValue(new BytesRef(idField.stringValue()));
+              binaryDVField.setBytesValue(newBytesRef(idField.stringValue()));
               numericDVField.setLongValue(i);
-              sortedDVField.setBytesValue(new BytesRef(idField.stringValue()));
-              sortedSetDVField.setBytesValue(new BytesRef(idField.stringValue()));
+              sortedDVField.setBytesValue(newBytesRef(idField.stringValue()));
+              sortedSetDVField.setBytesValue(newBytesRef(idField.stringValue()));
               int action = random.nextInt(100);
               if (action == 17) {
                 w.addIndexes(adder);
@@ -1024,22 +1000,18 @@ public class TestIndexWriter extends LuceneTestCase {
             w = null;
             DirectoryReader.open(dir).close();
 
-            // Strangely, if we interrupt a thread before
-            // all classes are loaded, the class loader
-            // seems to do scary things with the interrupt
-            // status.  In java 1.5, it'll throw an
-            // incorrect ClassNotFoundException.  In java
-            // 1.6, it'll silently clear the interrupt.
-            // So, on first iteration through here we
-            // don't open ourselves up for interrupts
+            // Strangely, if we interrupt a thread before all classes are loaded,
+            // the class loader seems to do scary things with the interrupt status.
+            // In java 1.5, it'll throw an incorrect ClassNotFoundException.
+            // In java 1.6, it'll silently clear the interrupt.
+            // So, on first iteration through here we don't open ourselves up for interrupts
             // until we've done the above loop.
             allowInterrupt = true;
           }
         } catch (ThreadInterruptedException re) {
-          // NOTE: important to leave this verbosity/noise
-          // on!!  This test doesn't repro easily so when
-          // Jenkins hits a fail we need to study where the
-          // interrupts struck!
+          // NOTE: important to leave this verbosity/noise on!!
+          // This test doesn't repro easily so when Jenkins hits a fail
+          // we need to study where the interrupts struck!
           log.println("TEST thread " + id + ": got interrupt");
           re.printStackTrace(log);
           Throwable e = re.getCause();
@@ -1117,14 +1089,14 @@ public class TestIndexWriter extends LuceneTestCase {
     }
   }
 
+  @SuppressForbidden(reason = "Thread sleep")
   public void testThreadInterruptDeadlock() throws Exception {
     IndexerThreadInterrupt t = new IndexerThreadInterrupt(1);
     t.setDaemon(true);
     t.start();
 
-    // Force class loader to load ThreadInterruptedException
-    // up front... else we can see a false failure if 2nd
-    // interrupt arrives while class loader is trying to
+    // Force class loader to load ThreadInterruptedException up front...
+    // else we can see a false failure if 2nd interrupt arrives while class loader is trying to
     // init this class (in servicing a first interrupt):
     assertTrue(
         new ThreadInterruptedException(new InterruptedException()).getCause()
@@ -1134,8 +1106,7 @@ public class TestIndexWriter extends LuceneTestCase {
     final int numInterrupts = atLeast(100);
     int i = 0;
     while (i < numInterrupts) {
-      // TODO: would be nice to also sometimes interrupt the
-      // CMS merge threads too ...
+      // TODO: would be nice to also sometimes interrupt the CMS merge threads too ...
       Thread.sleep(10);
       if (t.allowInterrupt) {
         i++;
@@ -1148,7 +1119,7 @@ public class TestIndexWriter extends LuceneTestCase {
     t.finish = true;
     t.join();
     if (t.failed) {
-      fail(t.bytesLog.toString("UTF-8"));
+      fail(t.bytesLog.toString(UTF_8));
     }
   }
 
@@ -1163,41 +1134,44 @@ public class TestIndexWriter extends LuceneTestCase {
     FieldType customType = new FieldType(StoredField.TYPE);
     customType.setTokenized(true);
 
-    Field f = new Field("binary", b, 10, 17, customType);
+    final MockTokenizer field1 = new MockTokenizer(MockTokenizer.WHITESPACE, false);
+    Field f =
+        new Field("binary", b, 10, 17, customType) {
+          @Override
+          public TokenStream tokenStream(Analyzer analyzer, TokenStream reuse) {
+            return field1;
+          }
+        };
     // TODO: this is evil, changing the type after creating the field:
     customType.setIndexOptions(IndexOptions.DOCS);
-    final MockTokenizer doc1field1 = new MockTokenizer(MockTokenizer.WHITESPACE, false);
-    doc1field1.setReader(new StringReader("doc1field1"));
-    f.setTokenStream(doc1field1);
+    field1.setReader(new StringReader("doc1field1"));
 
     FieldType customType2 = new FieldType(TextField.TYPE_STORED);
 
-    Field f2 = newField("string", "value", customType2);
-    final MockTokenizer doc1field2 = new MockTokenizer(MockTokenizer.WHITESPACE, false);
-    doc1field2.setReader(new StringReader("doc1field2"));
-    f2.setTokenStream(doc1field2);
+    final MockTokenizer field2 = new MockTokenizer(MockTokenizer.WHITESPACE, false);
+    Field f2 =
+        new Field("string", "value", customType2) {
+          @Override
+          public TokenStream tokenStream(Analyzer analyzer, TokenStream reuse) {
+            return field2;
+          }
+        };
+
+    field2.setReader(new StringReader("doc1field2"));
     doc.add(f);
     doc.add(f2);
     w.addDocument(doc);
 
     // add 2 docs to test in-memory merging
-    final MockTokenizer doc2field1 = new MockTokenizer(MockTokenizer.WHITESPACE, false);
-    doc2field1.setReader(new StringReader("doc2field1"));
-    f.setTokenStream(doc2field1);
-    final MockTokenizer doc2field2 = new MockTokenizer(MockTokenizer.WHITESPACE, false);
-    doc2field2.setReader(new StringReader("doc2field2"));
-    f2.setTokenStream(doc2field2);
+    field1.setReader(new StringReader("doc2field1"));
+    field2.setReader(new StringReader("doc2field2"));
     w.addDocument(doc);
 
     // force segment flush so we can force a segment merge with doc3 later.
     w.commit();
 
-    final MockTokenizer doc3field1 = new MockTokenizer(MockTokenizer.WHITESPACE, false);
-    doc3field1.setReader(new StringReader("doc3field1"));
-    f.setTokenStream(doc3field1);
-    final MockTokenizer doc3field2 = new MockTokenizer(MockTokenizer.WHITESPACE, false);
-    doc3field2.setReader(new StringReader("doc3field2"));
-    f2.setTokenStream(doc3field2);
+    field1.setReader(new StringReader("doc3field1"));
+    field2.setReader(new StringReader("doc3field2"));
 
     w.addDocument(doc);
     w.commit();
@@ -1205,44 +1179,45 @@ public class TestIndexWriter extends LuceneTestCase {
     w.close();
 
     IndexReader ir = DirectoryReader.open(dir);
-    Document doc2 = ir.document(0);
+    StoredFields storedFields = ir.storedFields();
+    Document doc2 = storedFields.document(0);
     IndexableField f3 = doc2.getField("binary");
     b = f3.binaryValue().bytes;
-    assertTrue(b != null);
-    assertEquals(17, b.length, 17);
+    assertNotNull(b);
+    assertEquals(17, b.length);
     assertEquals(87, b[0]);
 
-    assertTrue(ir.document(0).getField("binary").binaryValue() != null);
-    assertTrue(ir.document(1).getField("binary").binaryValue() != null);
-    assertTrue(ir.document(2).getField("binary").binaryValue() != null);
+    assertNotNull(storedFields.document(0).getField("binary").binaryValue());
+    assertNotNull(storedFields.document(1).getField("binary").binaryValue());
+    assertNotNull(storedFields.document(2).getField("binary").binaryValue());
 
-    assertEquals("value", ir.document(0).get("string"));
-    assertEquals("value", ir.document(1).get("string"));
-    assertEquals("value", ir.document(2).get("string"));
+    assertEquals("value", storedFields.document(0).get("string"));
+    assertEquals("value", storedFields.document(1).get("string"));
+    assertEquals("value", storedFields.document(2).get("string"));
 
     // test that the terms were indexed.
     assertTrue(
-        TestUtil.docs(random(), ir, "binary", new BytesRef("doc1field1"), null, PostingsEnum.NONE)
+        TestUtil.docs(random(), ir, "binary", newBytesRef("doc1field1"), null, PostingsEnum.NONE)
                 .nextDoc()
             != DocIdSetIterator.NO_MORE_DOCS);
     assertTrue(
-        TestUtil.docs(random(), ir, "binary", new BytesRef("doc2field1"), null, PostingsEnum.NONE)
+        TestUtil.docs(random(), ir, "binary", newBytesRef("doc2field1"), null, PostingsEnum.NONE)
                 .nextDoc()
             != DocIdSetIterator.NO_MORE_DOCS);
     assertTrue(
-        TestUtil.docs(random(), ir, "binary", new BytesRef("doc3field1"), null, PostingsEnum.NONE)
+        TestUtil.docs(random(), ir, "binary", newBytesRef("doc3field1"), null, PostingsEnum.NONE)
                 .nextDoc()
             != DocIdSetIterator.NO_MORE_DOCS);
     assertTrue(
-        TestUtil.docs(random(), ir, "string", new BytesRef("doc1field2"), null, PostingsEnum.NONE)
+        TestUtil.docs(random(), ir, "string", newBytesRef("doc1field2"), null, PostingsEnum.NONE)
                 .nextDoc()
             != DocIdSetIterator.NO_MORE_DOCS);
     assertTrue(
-        TestUtil.docs(random(), ir, "string", new BytesRef("doc2field2"), null, PostingsEnum.NONE)
+        TestUtil.docs(random(), ir, "string", newBytesRef("doc2field2"), null, PostingsEnum.NONE)
                 .nextDoc()
             != DocIdSetIterator.NO_MORE_DOCS);
     assertTrue(
-        TestUtil.docs(random(), ir, "string", new BytesRef("doc3field2"), null, PostingsEnum.NONE)
+        TestUtil.docs(random(), ir, "string", newBytesRef("doc3field2"), null, PostingsEnum.NONE)
                 .nextDoc()
             != DocIdSetIterator.NO_MORE_DOCS);
 
@@ -1261,18 +1236,16 @@ public class TestIndexWriter extends LuceneTestCase {
 
   public void testDeleteUnusedFiles() throws Exception {
     assumeFalse("test relies on exact filenames", Codec.getDefault() instanceof SimpleTextCodec);
-    assumeWorkingMMapOnWindows();
 
     for (int iter = 0; iter < 2; iter++) {
-      // relies on windows semantics
+      // relies on Windows semantics
       Path path = createTempDir();
-      FileSystem fs = new WindowsFS(path.getFileSystem()).getFileSystem(URI.create("file:///"));
-      Path indexPath = new FilterPath(path, fs);
+      WindowsFS provider = new WindowsFS(path.getFileSystem());
+      Path indexPath = provider.wrapPath(path);
 
       // NOTE: on Unix, we cannot use MMapDir, because WindowsFS doesn't see/think it keeps file
-      // handles open.  Yet, on Windows, we MUST use
-      // MMapDir because the windows OS will in fact prevent file deletion for us, and fails
-      // otherwise:
+      // handles open. Yet, on Windows, we MUST use MMapDir because the Windows OS will in fact
+      // prevent file deletion for us, and fails otherwise:
       FSDirectory dir;
       if (Constants.WINDOWS) {
         dir = new MMapDirectory(indexPath);
@@ -1298,7 +1271,7 @@ public class TestIndexWriter extends LuceneTestCase {
       DirectoryReader r;
       if (iter == 0) {
         // use NRT
-        r = w.getReader();
+        r = DirectoryReader.open(w);
       } else {
         // don't use NRT
         w.commit();
@@ -1322,12 +1295,11 @@ public class TestIndexWriter extends LuceneTestCase {
       }
       IndexReader r2 = DirectoryReader.openIfChanged(r);
       assertNotNull(r2);
-      assertTrue(r != r2);
+      assertNotSame(r, r2);
 
-      // NOTE: here we rely on "Windows" behavior, ie, even
-      // though IW wanted to delete _0.cfs since it was
-      // merged away, because we have a reader open
-      // against this file, it should still be here:
+      // NOTE: here we rely on "Windows" behavior, i.e. even though IW wanted to delete _0.cfs
+      // since it was merged away, because we have a reader open against this file,
+      // it should still be here:
       assertTrue(Files.exists(indexPath.resolve("_0.cfs")));
       // forceMerge created this
       // assertTrue(files.contains("_2.cfs"));
@@ -1427,8 +1399,7 @@ public class TestIndexWriter extends LuceneTestCase {
                 .setUseCompoundFile(false));
     String[] files = dir.listAll();
 
-    // Creating over empty dir should not create any files,
-    // or, at most the write.lock file
+    // Creating over empty dir should not create any files, or, at most the write.lock file
     final int extraFileCount = files.length - origFiles.length;
     if (extraFileCount == 1) {
       assertTrue(Arrays.asList(files).contains(IndexWriter.WRITE_LOCK_NAME));
@@ -1476,7 +1447,7 @@ public class TestIndexWriter extends LuceneTestCase {
 
     // After rollback, IW should remove all files
     writer.rollback();
-    String allFiles[] = dir.listAll();
+    String[] allFiles = dir.listAll();
     assertEquals(
         "no files should exist in the directory after rollback",
         origFiles.length + extraFileCount,
@@ -1517,10 +1488,10 @@ public class TestIndexWriter extends LuceneTestCase {
 
     for (int i = 0; i < 2; i++) {
       Document doc = new Document();
-      doc.add(new Field("id", Integer.toString(i) + BIG, customType3));
-      doc.add(new Field("str", Integer.toString(i) + BIG, customType2));
-      doc.add(new Field("str2", Integer.toString(i) + BIG, storedTextType));
-      doc.add(new Field("str3", Integer.toString(i) + BIG, customType));
+      doc.add(new Field("id", i + BIG, customType3));
+      doc.add(new Field("str", i + BIG, customType2));
+      doc.add(new Field("str2", i + BIG, storedTextType));
+      doc.add(new Field("str3", i + BIG, customType));
       indexWriter.addDocument(doc);
     }
 
@@ -1532,7 +1503,7 @@ public class TestIndexWriter extends LuceneTestCase {
     DirectoryReader r0 = DirectoryReader.open(dir);
     for (LeafReaderContext ctx : r0.leaves()) {
       SegmentReader sr = (SegmentReader) ctx.reader();
-      assertFalse(sr.getFieldInfos().hasVectors());
+      assertFalse(sr.getFieldInfos().hasTermVectors());
     }
 
     r0.close();
@@ -1595,11 +1566,7 @@ public class TestIndexWriter extends LuceneTestCase {
     // This contents produces a too-long term:
     String contents = "abc xyz x" + bigTerm + " another term";
     hugeDoc.add(new TextField("content", contents, Field.Store.NO));
-    expectThrows(
-        IllegalArgumentException.class,
-        () -> {
-          w.addDocument(hugeDoc);
-        });
+    expectThrows(IllegalArgumentException.class, () -> w.addDocument(hugeDoc));
 
     // Make sure we can add another normal document
     Document doc = new Document();
@@ -1617,16 +1584,15 @@ public class TestIndexWriter extends LuceneTestCase {
     assertEquals(1, reader.docFreq(new Term("content", "bbb")));
     assertEquals(0, reader.docFreq(new Term("content", "term")));
 
-    // Make sure the doc that has the massive term is NOT in
-    // the index:
+    // Make sure the doc that has the massive term is NOT in the index:
     assertEquals("document with wicked long term is in the index!", 1, reader.numDocs());
 
     reader.close();
     dir.close();
     dir = newDirectory();
 
-    // Make sure we can add a document with exactly the
-    // maximum length term, and search on that term:
+    // Make sure we can add a document with exactly the maximum length term,
+    // and search on that term:
     doc = new Document();
     FieldType customType = new FieldType(TextField.TYPE_NOT_STORED);
     customType.setTokenized(false);
@@ -1672,8 +1638,7 @@ public class TestIndexWriter extends LuceneTestCase {
 
       w.deleteAll();
       w.commit();
-      // Make sure we accumulate no files except for empty
-      // segments_N and segments.gen:
+      // Make sure we accumulate no files except for empty segments_N and segments.gen:
       assertTrue(d.listAll().length <= 2);
     }
 
@@ -1687,18 +1652,18 @@ public class TestIndexWriter extends LuceneTestCase {
     Document doc = new Document();
     doc.add(newStringField("id", "0", Field.Store.YES));
     w.addDocument(doc);
-    DirectoryReader r = w.getReader();
+    DirectoryReader r = DirectoryReader.open(w);
     long version = r.getVersion();
     r.close();
 
     w.addDocument(doc);
-    r = w.getReader();
+    r = DirectoryReader.open(w);
     long version2 = r.getVersion();
     r.close();
     assert (version2 > version);
 
     w.deleteDocuments(new Term("id", "0"));
-    r = w.getReader();
+    r = DirectoryReader.open(w);
     w.close();
     long version3 = r.getVersion();
     r.close();
@@ -1707,8 +1672,8 @@ public class TestIndexWriter extends LuceneTestCase {
   }
 
   public void testWhetherDeleteAllDeletesWriteLock() throws Exception {
-    // Must use SimpleFSLockFactory... NativeFSLockFactory
-    // somehow "knows" a lock is held against write.lock
+    // Must use SimpleFSLockFactory...
+    // NativeFSLockFactory somehow "knows" a lock is held against write.lock
     // even if you remove that file:
     Directory d =
         newFSDirectory(
@@ -1718,23 +1683,126 @@ public class TestIndexWriter extends LuceneTestCase {
     w1.deleteAll();
     expectThrows(
         LockObtainFailedException.class,
-        () -> {
-          new RandomIndexWriter(random(), d, newIndexWriterConfig(null));
-        });
+        () -> new RandomIndexWriter(random(), d, newIndexWriterConfig(null)));
 
     w1.close();
     d.close();
   }
 
-  public void testOnlyUpdateDocuments() throws Exception {
-    Directory dir = newDirectory();
-    IndexWriter w = new IndexWriter(dir, new IndexWriterConfig(new MockAnalyzer(random())));
+  public void testHasBlocksMergeFullyDelSegments() throws IOException {
+    Supplier<Document> documentSupplier =
+        () -> {
+          Document doc = new Document();
+          doc.add(new StringField("foo", "bar", Field.Store.NO));
+          return doc;
+        };
+    try (Directory dir = newDirectory()) {
+      try (IndexWriter writer =
+          new IndexWriter(dir, new IndexWriterConfig(new MockAnalyzer(random())))) {
+        final List<Document> docs = new ArrayList<>();
+        docs.add(documentSupplier.get());
+        docs.add(documentSupplier.get());
+        writer.updateDocuments(new Term("foo", "bar"), docs);
+        writer.commit();
+        if (random().nextBoolean()) {
+          writer.updateDocuments(new Term("foo", "bar"), docs);
+          writer.commit(); // second segment
+        }
+        writer.updateDocument(new Term("foo", "bar"), documentSupplier.get());
+        if (random().nextBoolean()) {
+          writer.forceMergeDeletes(true);
+        } else {
+          writer.forceMerge(1, true);
+        }
+        writer.commit();
+        try (DirectoryReader reader = DirectoryReader.open(dir)) {
+          assertEquals(1, reader.leaves().size());
+          assertFalse(
+              "hasBlocks should be cleared",
+              reader.leaves().get(0).reader().getMetaData().hasBlocks());
+        }
+      }
+    }
+  }
 
-    final List<Document> docs = new ArrayList<>();
-    docs.add(new Document());
-    w.updateDocuments(new Term("foo", "bar"), docs);
-    w.close();
-    dir.close();
+  public void testSingleDocsDoNotTriggerHasBlocks() throws IOException {
+    try (Directory dir = newDirectory()) {
+      try (IndexWriter w =
+          new IndexWriter(
+              dir,
+              new IndexWriterConfig(new MockAnalyzer(random()))
+                  .setMaxBufferedDocs(Integer.MAX_VALUE)
+                  .setRAMBufferSizeMB(100))) {
+
+        int docs = random().nextInt(1, 100);
+        for (int i = 0; i < docs; i++) {
+          Document doc = new Document();
+          doc.add(new StringField("id", "" + i, Field.Store.NO));
+          w.addDocuments(Arrays.asList(doc));
+        }
+        w.commit();
+        SegmentInfos si = w.cloneSegmentInfos();
+        assertEquals(1, si.size());
+        assertFalse(si.asList().get(0).info.getHasBlocks());
+
+        Document doc = new Document();
+        doc.add(new StringField("id", "XXX", Field.Store.NO));
+        w.addDocuments(Arrays.asList(doc, doc));
+        w.commit();
+        si = w.cloneSegmentInfos();
+        assertEquals(2, si.size());
+        assertFalse(si.asList().get(0).info.getHasBlocks());
+        assertTrue(si.asList().get(1).info.getHasBlocks());
+        w.forceMerge(1);
+
+        w.commit();
+        si = w.cloneSegmentInfos();
+        assertEquals(1, si.size());
+        assertTrue(si.asList().get(0).info.getHasBlocks());
+      }
+    }
+  }
+
+  public void testCarryOverHasBlocks() throws Exception {
+    try (Directory dir = newDirectory()) {
+      try (IndexWriter w =
+          new IndexWriter(dir, new IndexWriterConfig(new MockAnalyzer(random())))) {
+
+        final List<Document> docs = new ArrayList<>();
+        docs.add(new Document());
+        w.updateDocuments(new Term("foo", "bar"), docs);
+        w.commit();
+        try (DirectoryReader reader = DirectoryReader.open(dir)) {
+          SegmentCommitInfo segmentInfo =
+              ((SegmentReader) reader.leaves().get(0).reader()).getSegmentInfo();
+          assertFalse(segmentInfo.info.getHasBlocks());
+        }
+
+        docs.add(new Document()); // now we have 2 docs
+        w.updateDocuments(new Term("foo", "bar"), docs);
+        w.commit();
+        try (DirectoryReader reader = DirectoryReader.open(dir)) {
+          assertEquals(2, reader.leaves().size());
+          SegmentCommitInfo segmentInfo =
+              ((SegmentReader) reader.leaves().get(0).reader()).getSegmentInfo();
+          assertFalse(
+              "codec: " + segmentInfo.info.getCodec().toString(), segmentInfo.info.getHasBlocks());
+          segmentInfo = ((SegmentReader) reader.leaves().get(1).reader()).getSegmentInfo();
+          assertTrue(
+              "codec: " + segmentInfo.info.getCodec().toString(), segmentInfo.info.getHasBlocks());
+        }
+        w.forceMerge(1, true);
+        w.commit();
+        try (DirectoryReader reader = DirectoryReader.open(dir)) {
+          assertEquals(1, reader.leaves().size());
+          SegmentCommitInfo segmentInfo =
+              ((SegmentReader) reader.leaves().get(0).reader()).getSegmentInfo();
+          assertTrue(
+              "codec: " + segmentInfo.info.getCodec().toString(), segmentInfo.info.getHasBlocks());
+        }
+        w.commit();
+      }
+    }
   }
 
   // LUCENE-3872
@@ -1743,11 +1811,7 @@ public class TestIndexWriter extends LuceneTestCase {
     IndexWriter w = new IndexWriter(dir, new IndexWriterConfig(new MockAnalyzer(random())));
 
     w.prepareCommit();
-    expectThrows(
-        IllegalStateException.class,
-        () -> {
-          w.close();
-        });
+    expectThrows(IllegalStateException.class, w::close);
     w.commit();
     w.close();
     IndexReader r = DirectoryReader.open(dir);
@@ -1866,7 +1930,7 @@ public class TestIndexWriter extends LuceneTestCase {
     builder.add(new Term("body", "test"), 2);
     PhraseQuery pq = builder.build();
     // body:"just ? test"
-    assertEquals(1, is.search(pq, 5).totalHits.value);
+    assertEquals(1, is.search(pq, 5).totalHits.value());
     ir.close();
     dir.close();
   }
@@ -1899,7 +1963,7 @@ public class TestIndexWriter extends LuceneTestCase {
     builder.add(new Term("body", "test"), 3);
     PhraseQuery pq = builder.build();
     // body:"just ? ? test"
-    assertEquals(1, is.search(pq, 5).totalHits.value);
+    assertEquals(1, is.search(pq, 5).totalHits.value());
     ir.close();
     dir.close();
   }
@@ -1961,14 +2025,13 @@ public class TestIndexWriter extends LuceneTestCase {
     Map<String, String> data = new HashMap<>();
     Iterable<Map.Entry<String, String>> iter = writer.getLiveCommitData();
     if (iter != null) {
-      for (Map.Entry<String, String> ent : iter) {
+      for (var ent : iter) {
         data.put(ent.getKey(), ent.getValue());
       }
     }
     return data;
   }
 
-  @Test
   public void testGetCommitData() throws Exception {
     Directory dir = newDirectory();
     IndexWriter writer = new IndexWriter(dir, newIndexWriterConfig(null));
@@ -1983,6 +2046,47 @@ public class TestIndexWriter extends LuceneTestCase {
 
     // validate that it's also visible when opening a new IndexWriter
     writer = new IndexWriter(dir, newIndexWriterConfig(null).setOpenMode(OpenMode.APPEND));
+    assertEquals("value", getLiveCommitData(writer).get("key"));
+    writer.close();
+
+    dir.close();
+  }
+
+  public void testGetCommitDataFromOldSnapshot() throws Exception {
+    Directory dir = newDirectory();
+    IndexWriter writer = new IndexWriter(dir, newSnapshotIndexWriterConfig(null));
+    writer.setLiveCommitData(
+        new HashMap<String, String>() {
+          {
+            put("key", "value");
+          }
+        }.entrySet());
+    assertEquals("value", getLiveCommitData(writer).get("key"));
+    writer.commit();
+    // Snapshot this commit to open later
+    IndexCommit indexCommit =
+        ((SnapshotDeletionPolicy) writer.getConfig().getIndexDeletionPolicy()).snapshot();
+    writer.close();
+
+    // Modify the commit data and commit on close so the most recent commit data is different
+    writer = new IndexWriter(dir, newSnapshotIndexWriterConfig(null));
+    writer.setLiveCommitData(
+        new HashMap<String, String>() {
+          {
+            put("key", "value2");
+          }
+        }.entrySet());
+    assertEquals("value2", getLiveCommitData(writer).get("key"));
+    writer.close();
+
+    // validate that when opening writer from older snapshotted index commit,
+    // the old commit data is visible
+    writer =
+        new IndexWriter(
+            dir,
+            newSnapshotIndexWriterConfig(null)
+                .setOpenMode(OpenMode.APPEND)
+                .setIndexCommit(indexCommit));
     assertEquals("value", getLiveCommitData(writer).get("key"));
     writer.close();
 
@@ -2006,7 +2110,7 @@ public class TestIndexWriter extends LuceneTestCase {
         NullPointerException.class,
         () -> {
           Document broke = new Document();
-          broke.add(newTextField("test", "broken", Field.Store.NO));
+          broke.add(new Field("test", "broken", TEXT_TYPE_STORED_WITH_TVS));
           iw.addDocument(broke);
         });
 
@@ -2030,11 +2134,7 @@ public class TestIndexWriter extends LuceneTestCase {
     }
 
     // add broken doc
-    expectThrows(
-        NullPointerException.class,
-        () -> {
-          iw.addDocument(null);
-        });
+    expectThrows(NullPointerException.class, () -> iw.addDocument(null));
 
     // ensure good docs are still ok
     IndexReader ir = iw.getReader();
@@ -2057,11 +2157,7 @@ public class TestIndexWriter extends LuceneTestCase {
     }
 
     // add broken doc block
-    expectThrows(
-        NullPointerException.class,
-        () -> {
-          iw.addDocuments(null);
-        });
+    expectThrows(NullPointerException.class, () -> iw.addDocuments(null));
 
     // ensure good docs are still ok
     IndexReader ir = iw.getReader();
@@ -2090,7 +2186,7 @@ public class TestIndexWriter extends LuceneTestCase {
 
         boolean success = false;
         try {
-          w.addDocument(new RandomFailingIterable<IndexableField>(fields, random()));
+          w.addDocument(new RandomFailingIterable<>(fields, random()));
           success = true;
         } catch (RuntimeException e) {
           assertEquals("boom", e.getMessage());
@@ -2102,16 +2198,17 @@ public class TestIndexWriter extends LuceneTestCase {
         }
       }
     }
-    DirectoryReader reader = w.getReader();
+    DirectoryReader reader = DirectoryReader.open(w);
     assertEquals(docCount, reader.numDocs());
     List<LeafReaderContext> leaves = reader.leaves();
     for (LeafReaderContext leafReaderContext : leaves) {
       LeafReader ar = leafReaderContext.reader();
       Bits liveDocs = ar.getLiveDocs();
       int maxDoc = ar.maxDoc();
+      StoredFields storedFields = ar.storedFields();
       for (int i = 0; i < maxDoc; i++) {
         if (liveDocs == null || liveDocs.get(i)) {
-          assertTrue(liveIds.remove(ar.document(i).get("id")));
+          assertTrue(liveIds.remove(storedFields.document(i).get("id")));
         }
       }
     }
@@ -2138,7 +2235,7 @@ public class TestIndexWriter extends LuceneTestCase {
 
         boolean success = false;
         try {
-          w.addDocument(new RandomFailingIterable<IndexableField>(fields, random()));
+          w.addDocument(new RandomFailingIterable<>(fields, random()));
           success = true;
         } catch (RuntimeException e) {
           assertEquals("boom", e.getMessage());
@@ -2150,16 +2247,17 @@ public class TestIndexWriter extends LuceneTestCase {
         }
       }
     }
-    DirectoryReader reader = w.getReader();
+    DirectoryReader reader = DirectoryReader.open(w);
     assertEquals(docCount, reader.numDocs());
     List<LeafReaderContext> leaves = reader.leaves();
     for (LeafReaderContext leafReaderContext : leaves) {
       LeafReader ar = leafReaderContext.reader();
       Bits liveDocs = ar.getLiveDocs();
       int maxDoc = ar.maxDoc();
+      StoredFields storedFields = ar.storedFields();
       for (int i = 0; i < maxDoc; i++) {
         if (liveDocs == null || liveDocs.get(i)) {
-          assertTrue(liveIds.remove(ar.document(i).get("id")));
+          assertTrue(liveIds.remove(storedFields.document(i).get("id")));
         }
       }
     }
@@ -2217,7 +2315,7 @@ public class TestIndexWriter extends LuceneTestCase {
     @Override
     public Iterator<T> iterator() {
       final Iterator<? extends T> docIter = list.iterator();
-      return new Iterator<T>() {
+      return new Iterator<>() {
         int count = 0;
 
         @Override
@@ -2274,8 +2372,7 @@ public class TestIndexWriter extends LuceneTestCase {
           new IndexWriter(dir, iwc).rollback();
         }
       } catch (IOException ioe) {
-        // OpenMode.APPEND should throw an exception since no
-        // index exists:
+        // OpenMode.APPEND should throw an exception since no index exists:
         if (mode == 0) {
           // Unexpected
           throw ioe;
@@ -2296,7 +2393,13 @@ public class TestIndexWriter extends LuceneTestCase {
 
   public void testHasUncommittedChanges() throws IOException {
     Directory dir = newDirectory();
-    IndexWriter writer = new IndexWriter(dir, newIndexWriterConfig(new MockAnalyzer(random())));
+    IndexWriter writer =
+        new IndexWriter(
+            dir,
+            newIndexWriterConfig(new MockAnalyzer(random()))
+                // Disable merging to simplify this test, otherwise a commit might trigger
+                // uncommitted merges.
+                .setMergePolicy(NoMergePolicy.INSTANCE));
     assertTrue(
         writer.hasUncommittedChanges()); // this will be true because a commit will create an empty
     // index
@@ -2319,19 +2422,11 @@ public class TestIndexWriter extends LuceneTestCase {
     writer.addDocument(doc);
     assertTrue(writer.hasUncommittedChanges());
 
-    // Must commit, waitForMerges, commit again, to be
-    // certain that hasUncommittedChanges returns false:
-    writer.commit();
-    writer.waitForMerges();
     writer.commit();
     assertFalse(writer.hasUncommittedChanges());
     writer.deleteDocuments(new Term("id", "xyz"));
     assertTrue(writer.hasUncommittedChanges());
 
-    // Must commit, waitForMerges, commit again, to be
-    // certain that hasUncommittedChanges returns false:
-    writer.commit();
-    writer.waitForMerges();
     writer.commit();
     assertFalse(writer.hasUncommittedChanges());
     writer.close();
@@ -2352,8 +2447,7 @@ public class TestIndexWriter extends LuceneTestCase {
     iwc.setMergePolicy(
         new FilterMergePolicy(iwc.getMergePolicy()) {
           @Override
-          public boolean keepFullyDeletedSegment(IOSupplier<CodecReader> readerIOSupplier)
-              throws IOException {
+          public boolean keepFullyDeletedSegment(IOSupplier<CodecReader> readerIOSupplier) {
             return keepFullyDeletedSegments.get();
           }
         });
@@ -2363,14 +2457,11 @@ public class TestIndexWriter extends LuceneTestCase {
             random(),
             dir,
             iwc,
-            new RandomIndexWriter.TestPoint() {
-              @Override
-              public void apply(String message) {
-                if ("startCommitMerge".equals(message)) {
-                  keepFullyDeletedSegments.set(false);
-                } else if ("startMergeInit".equals(message)) {
-                  keepFullyDeletedSegments.set(true);
-                }
+            message -> {
+              if ("startCommitMerge".equals(message)) {
+                keepFullyDeletedSegments.set(false);
+              } else if ("startMergeInit".equals(message)) {
+                keepFullyDeletedSegments.set(true);
               }
             });
     iwRef.set(evilWriter);
@@ -2395,12 +2486,11 @@ public class TestIndexWriter extends LuceneTestCase {
     doc.add(new TextField("a", "foo", Field.Store.NO));
     w.addDocument(doc);
 
-    // Should not delete the document; with LUCENE-5239 the
-    // "foo" from the 2nd delete term would incorrectly
-    // match field a's "foo":
+    // Should not delete the document;
+    // with LUCENE-5239 the "foo" from the 2nd delete term would incorrectly match field a's "foo":
     w.deleteDocuments(new Term("a", "xxx"));
     w.deleteDocuments(new Term("b", "foo"));
-    IndexReader r = w.getReader();
+    IndexReader r = DirectoryReader.open(w);
     w.close();
 
     // Make sure document was not (incorrectly) deleted:
@@ -2418,13 +2508,9 @@ public class TestIndexWriter extends LuceneTestCase {
     iwc.setMergePolicy(newLogMergePolicy());
     IndexWriter iwriter = new IndexWriter(directory, iwc);
     Document doc = new Document();
-    doc.add(new SortedDocValuesField("dv", new BytesRef("foo!")));
-    doc.add(new SortedDocValuesField("dv", new BytesRef("bar!")));
-    expectThrows(
-        IllegalArgumentException.class,
-        () -> {
-          iwriter.addDocument(doc);
-        });
+    doc.add(new SortedDocValuesField("dv", newBytesRef("foo!")));
+    doc.add(new SortedDocValuesField("dv", newBytesRef("bar!")));
+    expectThrows(IllegalArgumentException.class, () -> iwriter.addDocument(doc));
 
     iwriter.commit();
     assertFalse(iwriter.hasUncommittedChanges());
@@ -2436,7 +2522,7 @@ public class TestIndexWriter extends LuceneTestCase {
     Directory dir = newDirectory();
     IndexWriter w = new IndexWriter(dir, newIndexWriterConfig(new MockAnalyzer(random())));
     Document doc = new Document();
-    doc.add(new SortedDocValuesField("dv", new BytesRef("foo!")));
+    doc.add(new SortedDocValuesField("dv", newBytesRef("foo!")));
     w.addDocument(doc);
     w.close();
     // Close again should have no effect
@@ -2448,7 +2534,7 @@ public class TestIndexWriter extends LuceneTestCase {
     Directory dir = newDirectory();
     IndexWriter w = new IndexWriter(dir, newIndexWriterConfig(new MockAnalyzer(random())));
     Document doc = new Document();
-    doc.add(new SortedDocValuesField("dv", new BytesRef("foo!")));
+    doc.add(new SortedDocValuesField("dv", newBytesRef("foo!")));
     w.addDocument(doc);
     w.rollback();
     // Close after rollback should have no effect
@@ -2460,7 +2546,7 @@ public class TestIndexWriter extends LuceneTestCase {
     Directory dir = newDirectory();
     IndexWriter w = new IndexWriter(dir, newIndexWriterConfig(new MockAnalyzer(random())));
     Document doc = new Document();
-    doc.add(new SortedDocValuesField("dv", new BytesRef("foo!")));
+    doc.add(new SortedDocValuesField("dv", newBytesRef("foo!")));
     w.addDocument(doc);
     w.close();
     // Rollback after close should have no effect
@@ -2517,7 +2603,7 @@ public class TestIndexWriter extends LuceneTestCase {
         });
     IndexWriter w = new IndexWriter(dir, iwc);
     Document doc = new Document();
-    doc.add(new SortedDocValuesField("dv", new BytesRef("foo!")));
+    doc.add(new SortedDocValuesField("dv", newBytesRef("foo!")));
     w.addDocument(doc);
     w.commit();
     w.addDocument(doc);
@@ -2527,6 +2613,7 @@ public class TestIndexWriter extends LuceneTestCase {
   }
 
   /** Make sure that close waits for any still-running commits. */
+  @SuppressForbidden(reason = "Thread sleep")
   public void testCloseDuringCommit() throws Exception {
 
     final CountDownLatch startCommit = new CountDownLatch(1);
@@ -2534,22 +2621,19 @@ public class TestIndexWriter extends LuceneTestCase {
 
     Directory dir = newDirectory();
     IndexWriterConfig iwc = new IndexWriterConfig(null);
-    // use an infostream that "takes a long time" to commit
+    // use an InfoStream that "takes a long time" to commit
     final IndexWriter iw =
         RandomIndexWriter.mockIndexWriter(
             random(),
             dir,
             iwc,
-            new RandomIndexWriter.TestPoint() {
-              @Override
-              public void apply(String message) {
-                if (message.equals("finishStartCommit")) {
-                  startCommit.countDown();
-                  try {
-                    Thread.sleep(10);
-                  } catch (InterruptedException ie) {
-                    throw new ThreadInterruptedException(ie);
-                  }
+            message -> {
+              if (message.equals("finishStartCommit")) {
+                startCommit.countDown();
+                try {
+                  Thread.sleep(10);
+                } catch (InterruptedException ie) {
+                  throw new ThreadInterruptedException(ie);
                 }
               }
             });
@@ -2567,7 +2651,9 @@ public class TestIndexWriter extends LuceneTestCase {
     startCommit.await();
     try {
       iw.close();
-    } catch (IllegalStateException ise) {
+    } catch (
+        @SuppressWarnings("unused")
+        IllegalStateException ise) {
       // OK, but not required (depends on thread scheduling)
     }
     finishCommit.await();
@@ -2599,10 +2685,10 @@ public class TestIndexWriter extends LuceneTestCase {
     // Make sure CheckIndex includes id output:
     ByteArrayOutputStream bos = new ByteArrayOutputStream(1024);
     CheckIndex checker = new CheckIndex(d);
-    checker.setDoSlowChecks(false);
-    checker.setInfoStream(new PrintStream(bos, false, IOUtils.UTF_8), false);
+    checker.setLevel(CheckIndex.Level.MIN_LEVEL_FOR_INTEGRITY_CHECKS);
+    checker.setInfoStream(new PrintStream(bos, false, UTF_8), false);
     CheckIndex.Status indexStatus = checker.checkIndex(null);
-    String s = bos.toString(IOUtils.UTF_8);
+    String s = bos.toString(UTF_8);
     checker.close();
     // Make sure CheckIndex didn't fail
     assertTrue(s, indexStatus != null && indexStatus.clean);
@@ -2787,8 +2873,8 @@ public class TestIndexWriter extends LuceneTestCase {
     DirectoryReader r2 = DirectoryReader.openIfChanged(r);
     assertNotNull(r2);
     // segments_N should have changed:
-    assertFalse(
-        r2.getIndexCommit().getSegmentsFileName().equals(r.getIndexCommit().getSegmentsFileName()));
+    assertNotEquals(
+        r2.getIndexCommit().getSegmentsFileName(), r.getIndexCommit().getSegmentsFileName());
     IOUtils.close(r, r2, w, dir);
   }
 
@@ -2799,8 +2885,8 @@ public class TestIndexWriter extends LuceneTestCase {
     Path path = createTempDir();
 
     // Use WindowsFS to prevent open files from being deleted:
-    FileSystem fs = new WindowsFS(path.getFileSystem()).getFileSystem(URI.create("file:///"));
-    Path root = new FilterPath(path, fs);
+    WindowsFS provider = new WindowsFS(path.getFileSystem());
+    Path root = provider.wrapPath(path);
 
     // MMapDirectory doesn't work because it closes its file handles after mapping!
     List<Closeable> toClose = new ArrayList<>();
@@ -2816,16 +2902,16 @@ public class TestIndexWriter extends LuceneTestCase {
       IndexWriter w = new IndexWriter(dir, iwc);
       Document d = new Document();
       d.add(new StringField("id", "1", Field.Store.YES));
-      d.add(new NumericDocValuesField("id", 1));
+      d.add(new NumericDocValuesField("nvd", 1));
       w.addDocument(d);
       d = new Document();
       d.add(new StringField("id", "2", Field.Store.YES));
-      d.add(new NumericDocValuesField("id", 2));
+      d.add(new NumericDocValuesField("nvd", 2));
       w.addDocument(d);
       w.flush();
       d = new Document();
       d.add(new StringField("id", "1", Field.Store.YES));
-      d.add(new NumericDocValuesField("id", 1));
+      d.add(new NumericDocValuesField("nvd", 1));
       w.updateDocument(new Term("id", "1"), d);
       w.commit();
       Set<String> files = new HashSet<>(Arrays.asList(dir.listAll()));
@@ -2834,12 +2920,12 @@ public class TestIndexWriter extends LuceneTestCase {
         if (random().nextBoolean()) {
           d = new Document();
           d.add(new StringField("id", "1", Field.Store.YES));
-          d.add(new NumericDocValuesField("id", 1));
+          d.add(new NumericDocValuesField("nvd", 1));
           w.updateDocument(new Term("id", "1"), d);
         } else if (random().nextBoolean()) {
           w.deleteDocuments(new Term("id", "2"));
         } else {
-          w.updateNumericDocValue(new Term("id", "1"), "id", 2);
+          w.updateNumericDocValue(new Term("id", "1"), "nvd", 2);
         }
         w.prepareCommit();
         List<String> newFiles = new ArrayList<>(Arrays.asList(dir.listAll()));
@@ -2854,25 +2940,21 @@ public class TestIndexWriter extends LuceneTestCase {
                 .setMaxBufferedDocs(2)
                 .setRAMBufferSizeMB(-1);
         w = new IndexWriter(dir, iwc);
-        expectThrows(
-            NoSuchFileException.class,
-            () -> {
-              dir.deleteFile(randomFile);
-            });
+        expectThrows(NoSuchFileException.class, () -> dir.deleteFile(randomFile));
       }
       w.close();
     }
   }
 
   public void testPendingDeletionsRollbackWithReader() throws IOException {
-    // irony: currently we don't emulate windows well enough to work on windows!
-    assumeFalse("windows is not supported", Constants.WINDOWS);
+    // irony: currently we don't emulate Windows well enough to work on Windows!
+    assumeFalse("Windows is not supported", Constants.WINDOWS);
 
     Path path = createTempDir();
 
     // Use WindowsFS to prevent open files from being deleted:
-    FileSystem fs = new WindowsFS(path.getFileSystem()).getFileSystem(URI.create("file:///"));
-    Path root = new FilterPath(path, fs);
+    WindowsFS provider = new WindowsFS(path.getFileSystem());
+    Path root = provider.wrapPath(path);
     try (FSDirectory _dir = new NIOFSDirectory(root)) {
       Directory dir = new FilterDirectory(_dir) {};
 
@@ -2904,14 +2986,14 @@ public class TestIndexWriter extends LuceneTestCase {
   }
 
   public void testWithPendingDeletions() throws Exception {
-    // irony: currently we don't emulate windows well enough to work on windows!
-    assumeFalse("windows is not supported", Constants.WINDOWS);
+    // irony: currently we don't emulate Windows well enough to work on Windows!
+    assumeFalse("Windows is not supported", Constants.WINDOWS);
 
     Path path = createTempDir();
 
     // Use WindowsFS to prevent open files from being deleted:
-    FileSystem fs = new WindowsFS(path.getFileSystem()).getFileSystem(URI.create("file:///"));
-    Path root = new FilterPath(path, fs);
+    WindowsFS provider = new WindowsFS(path.getFileSystem());
+    Path root = provider.wrapPath(path);
     IndexCommit indexCommit;
     DirectoryReader reader;
     // MMapDirectory doesn't work because it closes its file handles after mapping!
@@ -2921,7 +3003,7 @@ public class TestIndexWriter extends LuceneTestCase {
               .setIndexDeletionPolicy(NoDeletionPolicy.INSTANCE);
       IndexWriter w = new IndexWriter(dir, iwc);
       w.commit();
-      reader = w.getReader();
+      reader = DirectoryReader.open(w);
       // we pull this commit to open it again later to check that we fail if a future file delete is
       // pending
       indexCommit = reader.getIndexCommit();
@@ -2938,11 +3020,7 @@ public class TestIndexWriter extends LuceneTestCase {
       assertTrue(dir.getPendingDeletions().size() > 0);
 
       // make sure we get NoSuchFileException if we try to delete and already-pending-delete file:
-      expectThrows(
-          NoSuchFileException.class,
-          () -> {
-            dir.deleteFile("segments_2");
-          });
+      expectThrows(NoSuchFileException.class, () -> dir.deleteFile("segments_2"));
 
       try (IndexWriter writer =
           new IndexWriter(
@@ -2951,8 +3029,7 @@ public class TestIndexWriter extends LuceneTestCase {
         writer.commit();
         assertEquals(1, writer.getDocStats().maxDoc);
         // now check that we moved to 3
-        dir.openInput("segments_3", IOContext.READ).close();
-        ;
+        dir.openInput("segments_3", IOContext.DEFAULT).close();
       }
       reader.close();
       in.close();
@@ -2961,13 +3038,12 @@ public class TestIndexWriter extends LuceneTestCase {
 
   public void testPendingDeletesAlreadyWrittenFiles() throws IOException {
     Path path = createTempDir();
-    // irony: currently we don't emulate windows well enough to work on windows!
-    assumeFalse("windows is not supported", Constants.WINDOWS);
+    // irony: currently we don't emulate Windows well enough to work on Windows!
+    assumeFalse("Windows is not supported", Constants.WINDOWS);
 
     // Use WindowsFS to prevent open files from being deleted:
-    FileSystem fs = new WindowsFS(path.getFileSystem()).getFileSystem(URI.create("file:///"));
-    Path root = new FilterPath(path, fs);
-    DirectoryReader reader;
+    WindowsFS provider = new WindowsFS(path.getFileSystem());
+    Path root = provider.wrapPath(path);
     // MMapDirectory doesn't work because it closes its file handles after mapping!
     try (FSDirectory dir = new NIOFSDirectory(root)) {
       IndexWriterConfig iwc = new IndexWriterConfig(new MockAnalyzer(random()));
@@ -2980,11 +3056,7 @@ public class TestIndexWriter extends LuceneTestCase {
       assertTrue(dir.getPendingDeletions().size() > 0);
 
       // make sure we get NoSuchFileException if we try to delete and already-pending-delete file:
-      expectThrows(
-          NoSuchFileException.class,
-          () -> {
-            dir.deleteFile("segments_1");
-          });
+      expectThrows(NoSuchFileException.class, () -> dir.deleteFile("segments_1"));
       new IndexWriter(dir, new IndexWriterConfig(new MockAnalyzer(random()))).close();
       in.close();
     }
@@ -3006,7 +3078,7 @@ public class TestIndexWriter extends LuceneTestCase {
     try {
       dir.openInput(tempName, IOContext.DEFAULT);
       fail("did not hit exception");
-    } catch (FileNotFoundException | NoSuchFileException e) {
+    } catch (@SuppressWarnings("unused") FileNotFoundException | NoSuchFileException e) {
       // expected
     }
     w.close();
@@ -3027,12 +3099,7 @@ public class TestIndexWriter extends LuceneTestCase {
     final Document doc = new Document();
     // doc.add(new TextField("big", b.toString(), Field.Store.YES));
     doc.add(new StoredField("big", b.toString()));
-    Exception e =
-        expectThrows(
-            IllegalArgumentException.class,
-            () -> {
-              w.addDocument(doc);
-            });
+    Exception e = expectThrows(IllegalArgumentException.class, () -> w.addDocument(doc));
     assertEquals(
         "stored field \"big\" is too large (" + b.length() + " characters) to store",
         e.getMessage());
@@ -3134,6 +3201,92 @@ public class TestIndexWriter extends LuceneTestCase {
     assertEquals(0, w.docWriter.flushControl.numQueuedFlushes());
     w.close();
     dir.close();
+  }
+
+  public void testApplyDeletesWithoutFlushes() throws IOException {
+    try (Directory dir = newDirectory()) {
+      IndexWriterConfig indexWriterConfig = new IndexWriterConfig();
+      AtomicBoolean flushDeletes = new AtomicBoolean();
+      indexWriterConfig.setFlushPolicy(
+          new FlushPolicy() {
+            @Override
+            public void onChange(
+                DocumentsWriterFlushControl control, DocumentsWriterPerThread perThread) {
+              if (flushDeletes.get()) {
+                control.setApplyAllDeletes();
+              }
+            }
+          });
+      try (IndexWriter w = new IndexWriter(dir, indexWriterConfig)) {
+        assertEquals(0, w.docWriter.flushControl.getDeleteBytesUsed());
+        w.deleteDocuments(new Term("foo", "bar"));
+        long bytesUsed = w.docWriter.flushControl.getDeleteBytesUsed();
+        assertTrue(bytesUsed + " > 0", bytesUsed > 0);
+        w.deleteDocuments(new Term("foo", "baz"));
+        bytesUsed = w.docWriter.flushControl.getDeleteBytesUsed();
+        assertTrue(bytesUsed + " > 0", bytesUsed > 0);
+        assertEquals(2, w.getBufferedDeleteTermsSize());
+        assertEquals(0, w.getFlushDeletesCount());
+        flushDeletes.set(true);
+        w.deleteDocuments(new Term("foo", "bar"));
+        assertEquals(0, w.docWriter.flushControl.getDeleteBytesUsed());
+        assertEquals(1, w.getFlushDeletesCount());
+      }
+    }
+  }
+
+  public void testDeletesAppliedOnFlush() throws IOException {
+    try (Directory dir = newDirectory()) {
+      try (IndexWriter w = new IndexWriter(dir, new IndexWriterConfig())) {
+        Document doc = new Document();
+        doc.add(newField("id", "1", storedTextType));
+        w.addDocument(doc);
+        w.updateDocument(new Term("id", "1"), doc);
+        long deleteBytesUsed = w.docWriter.flushControl.getDeleteBytesUsed();
+        assertTrue("deletedBytesUsed: " + deleteBytesUsed, deleteBytesUsed > 0);
+        assertEquals(0, w.getFlushDeletesCount());
+        assertTrue(w.flushNextBuffer());
+        assertEquals(1, w.getFlushDeletesCount());
+        assertEquals(0, w.docWriter.flushControl.getDeleteBytesUsed());
+        w.deleteAll();
+        w.commit();
+        assertEquals(2, w.getFlushDeletesCount());
+        if (random().nextBoolean()) {
+          w.deleteDocuments(new Term("id", "1"));
+        } else {
+          w.updateDocValues(new Term("id", "1"), new NumericDocValuesField("foo", 1L));
+        }
+        deleteBytesUsed = w.docWriter.flushControl.getDeleteBytesUsed();
+        assertTrue("deletedBytesUsed: " + deleteBytesUsed, deleteBytesUsed > 0);
+        doc = new Document();
+        doc.add(newField("id", "5", storedTextType));
+        w.addDocument(doc);
+        assertTrue(w.flushNextBuffer());
+        assertEquals(0, w.docWriter.flushControl.getDeleteBytesUsed());
+        assertEquals(3, w.getFlushDeletesCount());
+      }
+      try (RandomIndexWriter w = new RandomIndexWriter(random(), dir, new IndexWriterConfig())) {
+        int numDocs = random().nextInt(1, 100);
+        for (int i = 0; i < numDocs; i++) {
+          Document doc = new Document();
+          doc.add(newField("id", "" + i, storedTextType));
+          w.addDocument(doc);
+        }
+        for (int i = 0; i < numDocs; i++) {
+          if (random().nextBoolean()) {
+            Document doc = new Document();
+            doc.add(newField("id", "" + i, storedTextType));
+            w.updateDocument(new Term("id", "" + i), doc);
+          }
+        }
+
+        long deleteBytesUsed = w.w.docWriter.flushControl.getDeleteBytesUsed();
+        if (deleteBytesUsed > 0) {
+          assertTrue(w.w.flushNextBuffer());
+          assertEquals(0, w.w.docWriter.flushControl.getDeleteBytesUsed());
+        }
+      }
+    }
   }
 
   public void testHoldLockOnLargestWriter() throws IOException, InterruptedException {
@@ -3254,15 +3407,12 @@ public class TestIndexWriter extends LuceneTestCase {
       }
       w.getConfig().setCheckPendingFlushUpdate(true);
       numIters = 0;
-      while (true) {
+      do {
         assertFalse("should finish in less than 100 iterations", numIters++ >= 100);
         waitForDocsInBuffers(w, Math.min(2, threads.length));
         w.flush();
         flushingThreads.retainAll(indexingThreads);
-        if (flushingThreads.isEmpty() == false) {
-          break;
-        }
-      }
+      } while (flushingThreads.isEmpty());
     } finally {
       done.set(true);
       for (int i = 0; i < numThreads; i++) {
@@ -3273,8 +3423,7 @@ public class TestIndexWriter extends LuceneTestCase {
   }
 
   private static void waitForDocsInBuffers(IndexWriter w, int buffersWithDocs) {
-    // wait until at least N DWPTs have a doc in order to observe
-    // who flushes the segments.
+    // wait until at least N DWPTs have a doc in order to observe who flushes the segments.
     while (true) {
       int numStatesWithDocs = 0;
       DocumentsWriterPerThreadPool perThreadPool = w.docWriter.perThreadPool;
@@ -3304,29 +3453,23 @@ public class TestIndexWriter extends LuceneTestCase {
                 .setSoftDeletesField("soft_delete"));
     expectThrows(
         IllegalArgumentException.class,
-        () -> {
-          writer.softUpdateDocument(
-              null, new Document(), new NumericDocValuesField("soft_delete", 1));
-        });
+        () ->
+            writer.softUpdateDocument(
+                null, new Document(), new NumericDocValuesField("soft_delete", 1)));
 
     expectThrows(
         IllegalArgumentException.class,
-        () -> {
-          writer.softUpdateDocument(new Term("id", "1"), new Document());
-        });
+        () -> writer.softUpdateDocument(new Term("id", "1"), new Document()));
 
     expectThrows(
         IllegalArgumentException.class,
-        () -> {
-          writer.softUpdateDocuments(
-              null, Arrays.asList(new Document()), new NumericDocValuesField("soft_delete", 1));
-        });
+        () ->
+            writer.softUpdateDocuments(
+                null, Arrays.asList(new Document()), new NumericDocValuesField("soft_delete", 1)));
 
     expectThrows(
         IllegalArgumentException.class,
-        () -> {
-          writer.softUpdateDocuments(new Term("id", "1"), Arrays.asList(new Document()));
-        });
+        () -> writer.softUpdateDocuments(new Term("id", "1"), Arrays.asList(new Document())));
 
     Document doc = new Document();
     doc.add(new StringField("id", "1", Field.Store.YES));
@@ -3341,8 +3484,8 @@ public class TestIndexWriter extends LuceneTestCase {
     assertEquals(2, reader.docFreq(new Term("id", "1")));
     IndexSearcher searcher = new IndexSearcher(reader);
     TopDocs topDocs = searcher.search(new TermQuery(new Term("id", "1")), 10);
-    assertEquals(1, topDocs.totalHits.value);
-    Document document = reader.document(topDocs.scoreDocs[0].doc);
+    assertEquals(1, topDocs.totalHits.value());
+    Document document = reader.storedFields().document(topDocs.scoreDocs[0].doc);
     assertEquals("2", document.get("version"));
 
     // update the on-disk version
@@ -3357,8 +3500,8 @@ public class TestIndexWriter extends LuceneTestCase {
     oldReader.close();
     searcher = new IndexSearcher(reader);
     topDocs = searcher.search(new TermQuery(new Term("id", "1")), 10);
-    assertEquals(1, topDocs.totalHits.value);
-    document = reader.document(topDocs.scoreDocs[0].doc);
+    assertEquals(1, topDocs.totalHits.value());
+    document = reader.storedFields().document(topDocs.scoreDocs[0].doc);
     assertEquals("3", document.get("version"));
 
     // now delete it
@@ -3370,7 +3513,7 @@ public class TestIndexWriter extends LuceneTestCase {
     oldReader.close();
     searcher = new IndexSearcher(reader);
     topDocs = searcher.search(new TermQuery(new Term("id", "1")), 10);
-    assertEquals(0, topDocs.totalHits.value);
+    assertEquals(0, topDocs.totalHits.value());
     int numSoftDeleted = 0;
     for (SegmentCommitInfo info : writer.cloneSegmentInfos()) {
       numSoftDeleted += info.getSoftDelCount();
@@ -3466,7 +3609,12 @@ public class TestIndexWriter extends LuceneTestCase {
                       Document doc = new Document();
                       doc.add(new StringField("id", id, Field.Store.YES));
                       if (mixDeletes && random().nextBoolean()) {
-                        writer.updateDocuments(new Term("id", id), Arrays.asList(doc, doc));
+                        if (random().nextBoolean()) {
+                          writer.updateDocuments(new Term("id", id), Arrays.asList(doc, doc));
+                        } else {
+                          writer.updateDocuments(
+                              new TermQuery(new Term("id", id)), Arrays.asList(doc, doc));
+                        }
                       } else {
                         writer.softUpdateDocuments(
                             new Term("id", id),
@@ -3494,18 +3642,18 @@ public class TestIndexWriter extends LuceneTestCase {
     started.await();
     startLatch.countDown();
 
-    for (int i = 0; i < threads.length; i++) {
-      threads[i].join();
+    for (Thread thread : threads) {
+      thread.join();
     }
     DirectoryReader reader = DirectoryReader.open(writer);
     IndexSearcher searcher = new IndexSearcher(reader);
     for (String id : ids) {
       TopDocs topDocs = searcher.search(new TermQuery(new Term("id", id)), 10);
       if (updateSeveralDocs) {
-        assertEquals(2, topDocs.totalHits.value);
+        assertEquals(2, topDocs.totalHits.value());
         assertEquals(Math.abs(topDocs.scoreDocs[0].doc - topDocs.scoreDocs[1].doc), 1);
       } else {
-        assertEquals(1, topDocs.totalHits.value);
+        assertEquals(1, topDocs.totalHits.value());
       }
     }
     if (mixDeletes == false) {
@@ -3592,10 +3740,9 @@ public class TestIndexWriter extends LuceneTestCase {
                 }
               });
       t.start();
-      try (IndexReader reader = writer.getReader()) {
+      try (IndexReader reader = DirectoryReader.open(writer)) {
         assertEquals(1, reader.numDocs());
       }
-      ;
       t.join();
     }
   }
@@ -3609,7 +3756,7 @@ public class TestIndexWriter extends LuceneTestCase {
             .stream().filter(filter).collect(Collectors.toSet());
     Set<String> dirFiles =
         Arrays.stream(writer.getDirectory().listAll())
-            .filter(file -> !ExtrasFS.isExtra(file)) // ExtraFS might add an files, ignore them
+            .filter(file -> !ExtrasFS.isExtra(file)) // ExtraFS might add files, ignore them
             .filter(filter)
             .collect(Collectors.toSet());
     assertEquals(segFiles.size(), dirFiles.size());
@@ -3650,7 +3797,7 @@ public class TestIndexWriter extends LuceneTestCase {
     d = new Document();
     d.add(new StringField("id", "doc-1", Field.Store.YES));
     writer.addDocument(d);
-    DirectoryReader reader = writer.getReader();
+    DirectoryReader reader = DirectoryReader.open(writer);
     SegmentCommitInfo segmentInfo =
         ((SegmentReader) reader.leaves().get(0).reader()).getSegmentInfo();
     SegmentCommitInfo originalInfo =
@@ -3687,9 +3834,7 @@ public class TestIndexWriter extends LuceneTestCase {
     IllegalArgumentException illegalError =
         expectThrows(
             IllegalArgumentException.class,
-            () -> {
-              new IndexWriter(dir, newIndexWriterConfig().setSoftDeletesField("your_deletes"));
-            });
+            () -> new IndexWriter(dir, newIndexWriterConfig().setSoftDeletesField("your_deletes")));
     assertEquals(
         "cannot configure [your_deletes] as soft-deletes; "
             + "this index uses [my_deletes] as soft-deletes already",
@@ -3700,7 +3845,7 @@ public class TestIndexWriter extends LuceneTestCase {
             .setSoftDeletesField("my_deletes")
             .setMergePolicy(
                 new SoftDeletesRetentionMergePolicy(
-                    "my_deletes", () -> new MatchAllDocsQuery(), newMergePolicy()));
+                    "my_deletes", MatchAllDocsQuery::new, newMergePolicy()));
     writer = new IndexWriter(dir, softDeleteConfig);
     Document tombstone = new Document();
     tombstone.add(new StringField("id", "tombstone", Field.Store.YES));
@@ -3716,10 +3861,7 @@ public class TestIndexWriter extends LuceneTestCase {
     // reopen writer without soft-deletes field should be prevented
     IllegalArgumentException reopenError =
         expectThrows(
-            IllegalArgumentException.class,
-            () -> {
-              new IndexWriter(dir, newIndexWriterConfig());
-            });
+            IllegalArgumentException.class, () -> new IndexWriter(dir, newIndexWriterConfig()));
     assertEquals(
         "this index has [my_deletes] as soft-deletes already"
             + " but soft-deletes field is not configured in IWC",
@@ -3805,7 +3947,7 @@ public class TestIndexWriter extends LuceneTestCase {
     IndexWriter w = new IndexWriter(d, newIndexWriterConfig(new MockAnalyzer(random())));
     Document doc = new Document();
     Token token = new Token("bar", 0, 3);
-    BytesRef evil = new BytesRef(new byte[1024]);
+    BytesRef evil = newBytesRef(new byte[1024]);
     evil.offset = 1000; // offset + length is now out of bounds.
     token.setPayload(evil);
     doc.add(new TextField("foo", new CannedTokenStream(token)));
@@ -3897,7 +4039,7 @@ public class TestIndexWriter extends LuceneTestCase {
           Bits liveDocs = sr.getLiveDocs();
           for (Integer dId : uniqueDocs) {
             boolean mustBeHardDeleted = dId % 2 == 0;
-            if (iterator.seekExact(new BytesRef(dId.toString()))) {
+            if (iterator.seekExact(newBytesRef(dId.toString()))) {
               PostingsEnum postings = iterator.postings(null);
               while (postings.nextDoc() != DocIdSetIterator.NO_MORE_DOCS) {
                 if (liveDocs.get(postings.docID())) {
@@ -4018,7 +4160,9 @@ public class TestIndexWriter extends LuceneTestCase {
                   indexedDocs.release(1);
                 } catch (IOException e) {
                   throw new AssertionError(e);
-                } catch (AlreadyClosedException ignored) {
+                } catch (
+                    @SuppressWarnings("unused")
+                    AlreadyClosedException ignored) {
                   return;
                 }
               }
@@ -4033,7 +4177,9 @@ public class TestIndexWriter extends LuceneTestCase {
                   sm.maybeRefreshBlocking();
                 } catch (IOException e) {
                   throw new AssertionError(e);
-                } catch (AlreadyClosedException ignored) {
+                } catch (
+                    @SuppressWarnings("unused")
+                    AlreadyClosedException ignored) {
                   return;
                 }
               }
@@ -4106,8 +4252,10 @@ public class TestIndexWriter extends LuceneTestCase {
                 try {
                   queue.processEvents();
                 } catch (IOException e) {
-                  throw new AssertionError();
-                } catch (AlreadyClosedException ex) {
+                  throw new AssertionError(e);
+                } catch (
+                    @SuppressWarnings("unused")
+                    AlreadyClosedException ex) {
                   // possible
                 }
               });
@@ -4116,7 +4264,7 @@ public class TestIndexWriter extends LuceneTestCase {
       t.join();
       assertEquals(4, executed.get());
       expectThrows(AlreadyClosedException.class, () -> queue.processEvents());
-      expectThrows(AlreadyClosedException.class, () -> queue.add(w -> {}));
+      expectThrows(AlreadyClosedException.class, () -> queue.add(_ -> {}));
     }
   }
 
@@ -4124,7 +4272,7 @@ public class TestIndexWriter extends LuceneTestCase {
     IndexWriterConfig iwc = newIndexWriterConfig();
     iwc.setMergePolicy(
         new FilterMergePolicy(newMergePolicy()) {
-          boolean keepFullyDeletedSegment = random().nextBoolean();
+          final boolean keepFullyDeletedSegment = random().nextBoolean();
 
           @Override
           public boolean keepFullyDeletedSegment(IOSupplier<CodecReader> readerIOSupplier) {
@@ -4249,7 +4397,7 @@ public class TestIndexWriter extends LuceneTestCase {
 
   public void testMaxCompletedSequenceNumber() throws IOException, InterruptedException {
     try (Directory dir = newDirectory();
-        IndexWriter writer = new IndexWriter(dir, new IndexWriterConfig()); ) {
+        IndexWriter writer = new IndexWriter(dir, new IndexWriterConfig())) {
       assertEquals(1, writer.addDocument(new Document()));
       assertEquals(2, writer.updateDocument(new Term("foo", "bar"), new Document()));
       writer.flushNextBuffer();
@@ -4260,7 +4408,7 @@ public class TestIndexWriter extends LuceneTestCase {
       assertEquals(6, writer.commit());
       assertEquals(6, writer.getMaxCompletedSequenceNumber());
       assertEquals(7, writer.addDocument(new Document()));
-      writer.getReader().close();
+      DirectoryReader.open(writer).close();
       // getReader moves seqNo by 2 since there is one DWPT that could still be in-flight
       assertEquals(9, writer.getMaxCompletedSequenceNumber());
     }
@@ -4268,7 +4416,8 @@ public class TestIndexWriter extends LuceneTestCase {
         IndexWriter writer = new IndexWriter(dir, newIndexWriterConfig());
         SearcherManager manager = new SearcherManager(writer, new SearcherFactory())) {
       CountDownLatch start = new CountDownLatch(1);
-      int numDocs = 100 + random().nextInt(500);
+      int numDocs =
+          TEST_NIGHTLY ? TestUtil.nextInt(random(), 100, 600) : TestUtil.nextInt(random(), 10, 60);
       AtomicLong maxCompletedSeqID = new AtomicLong(-1);
       Thread[] threads = new Thread[2 + random().nextInt(2)];
       for (int i = 0; i < threads.length; i++) {
@@ -4293,7 +4442,10 @@ public class TestIndexWriter extends LuceneTestCase {
                       try {
                         assertEquals(
                             1,
-                            acquire.search(new TermQuery(new Term("id", id)), 10).totalHits.value);
+                            acquire
+                                .search(new TermQuery(new Term("id", id)), 10)
+                                .totalHits
+                                .value());
                       } finally {
                         manager.release(acquire);
                       }
@@ -4305,8 +4457,8 @@ public class TestIndexWriter extends LuceneTestCase {
         threads[i].start();
       }
       start.countDown();
-      for (int i = 0; i < threads.length; i++) {
-        threads[i].join();
+      for (Thread thread : threads) {
+        thread.join();
       }
     }
   }
@@ -4369,7 +4521,7 @@ public class TestIndexWriter extends LuceneTestCase {
           new Thread(
               () -> {
                 try {
-                  writer.getReader().close();
+                  DirectoryReader.open(writer).close();
                 } catch (IOException e) {
                   throw new AssertionError(e);
                 }
@@ -4549,7 +4701,7 @@ public class TestIndexWriter extends LuceneTestCase {
             List<SegmentCommitInfo> fullyDeletedSegments =
                 segmentInfos.asList().stream()
                     .filter(s -> s.info.maxDoc() - s.getDelCount() == 0)
-                    .collect(Collectors.toList());
+                    .toList();
             if (fullyDeletedSegments.isEmpty()) {
               return null;
             }
@@ -4565,7 +4717,7 @@ public class TestIndexWriter extends LuceneTestCase {
     w.commit();
     w.updateDocument(new Term("id", "1"), d);
     w.commit();
-    try (DirectoryReader reader = w.getReader()) {
+    try (DirectoryReader reader = DirectoryReader.open(w)) {
       assertEquals(1, reader.numDocs());
     }
     IOUtils.close(w, dir);
@@ -4682,5 +4834,207 @@ public class TestIndexWriter extends LuceneTestCase {
     Document doc = new Document();
     doc.add(newField(field, "value", storedTextType));
     writer.addDocument(doc);
+  }
+
+  public void testParentAndSoftDeletesAreTheSame() throws IOException {
+    try (Directory dir = newDirectory()) {
+      IndexWriterConfig indexWriterConfig = newIndexWriterConfig(new MockAnalyzer(random()));
+      indexWriterConfig.setSoftDeletesField("foo");
+      indexWriterConfig.setParentField("foo");
+      IllegalArgumentException iae =
+          expectThrows(
+              IllegalArgumentException.class, () -> new IndexWriter(dir, indexWriterConfig));
+      assertEquals(
+          "parent document and soft-deletes field can't be the same field \"foo\"",
+          iae.getMessage());
+    }
+  }
+
+  public void testParentFieldExistingIndex() throws IOException {
+    try (Directory dir = newDirectory()) {
+      IndexWriterConfig iwc = new IndexWriterConfig(new MockAnalyzer(random()));
+      try (IndexWriter writer = new IndexWriter(dir, iwc)) {
+        Document d = new Document();
+        d.add(new TextField("f", "a", Field.Store.NO));
+        writer.addDocument(d);
+      }
+      IllegalArgumentException iae =
+          expectThrows(
+              IllegalArgumentException.class,
+              () ->
+                  new IndexWriter(
+                      dir,
+                      new IndexWriterConfig(new MockAnalyzer(random()))
+                          .setOpenMode(OpenMode.APPEND)
+                          .setParentField("foo")));
+      assertEquals(
+          "can't add a parent field to an already existing index without a parent field",
+          iae.getMessage());
+      iae =
+          expectThrows(
+              IllegalArgumentException.class,
+              () ->
+                  new IndexWriter(
+                      dir,
+                      new IndexWriterConfig(new MockAnalyzer(random()))
+                          .setOpenMode(OpenMode.CREATE_OR_APPEND)
+                          .setParentField("foo")));
+      assertEquals(
+          "can't add a parent field to an already existing index without a parent field",
+          iae.getMessage());
+
+      try (IndexWriter writer =
+          new IndexWriter(
+              dir,
+              new IndexWriterConfig(new MockAnalyzer(random()))
+                  .setOpenMode(OpenMode.CREATE)
+                  .setParentField("foo"))) {
+        writer.addDocument(new Document());
+      }
+    }
+  }
+
+  public void testIndexWithParentFieldIsCongruent() throws IOException {
+    try (Directory dir = newDirectory()) {
+      IndexWriterConfig iwc = new IndexWriterConfig(new MockAnalyzer(random()));
+      iwc.setParentField("parent");
+      try (IndexWriter writer = new IndexWriter(dir, iwc)) {
+        if (random().nextBoolean()) {
+          Document child1 = new Document();
+          child1.add(new StringField("id", Integer.toString(1), Field.Store.YES));
+          Document child2 = new Document();
+          child2.add(new StringField("id", Integer.toString(1), Field.Store.YES));
+          Document parent = new Document();
+          parent.add(new StringField("id", Integer.toString(1), Field.Store.YES));
+          writer.addDocuments(Arrays.asList(child1, child2, parent));
+          writer.flush();
+          if (random().nextBoolean()) {
+            writer.addDocuments(Arrays.asList(child1, child2, parent));
+          }
+        } else {
+          writer.addDocument(new Document());
+        }
+        writer.commit();
+      }
+      IllegalArgumentException ex =
+          expectThrows(
+              IllegalArgumentException.class,
+              () -> {
+                IndexWriterConfig config = new IndexWriterConfig(new MockAnalyzer(random()));
+                config.setParentField("someOtherField");
+                new IndexWriter(dir, config);
+              });
+      assertEquals(
+          "can't add field [parent] as parent document field; this IndexWriter is configured with [someOtherField] as parent document field",
+          ex.getMessage());
+      ex =
+          expectThrows(
+              IllegalArgumentException.class,
+              () -> {
+                IndexWriterConfig config = new IndexWriterConfig(new MockAnalyzer(random()));
+                new IndexWriter(dir, config);
+              });
+      assertEquals(
+          "can't add field [parent] as parent document field; this IndexWriter has no parent document field configured",
+          ex.getMessage());
+    }
+  }
+
+  public void testParentFieldIsAlreadyUsed() throws IOException {
+    try (Directory dir = newDirectory()) {
+
+      IndexWriterConfig iwc = new IndexWriterConfig(new MockAnalyzer(random()));
+      try (IndexWriter writer = new IndexWriter(dir, iwc)) {
+        Document doc = new Document();
+        doc.add(new StringField("parent", Integer.toString(1), Field.Store.YES));
+        writer.addDocument(doc);
+        writer.commit();
+      }
+      IllegalArgumentException iae =
+          expectThrows(
+              IllegalArgumentException.class,
+              () -> {
+                IndexWriterConfig config = new IndexWriterConfig(new MockAnalyzer(random()));
+                config.setParentField("parent");
+
+                new IndexWriter(dir, config);
+              });
+      assertEquals(
+          "can't add [parent] as non parent document field; this IndexWriter is configured with [parent] as parent document field",
+          iae.getMessage());
+    }
+  }
+
+  public void testParentFieldEmptyIndex() throws IOException {
+    try (Directory dir = newMockDirectory()) {
+      IndexWriterConfig iwc = new IndexWriterConfig(new MockAnalyzer(random()));
+      iwc.setParentField("parent");
+      try (IndexWriter writer = new IndexWriter(dir, iwc)) {
+        writer.commit();
+      }
+      IndexWriterConfig iwc2 = new IndexWriterConfig(new MockAnalyzer(random()));
+      iwc2.setParentField("parent");
+      try (IndexWriter writer = new IndexWriter(dir, iwc2)) {
+        writer.commit();
+      }
+    }
+  }
+
+  public void testDocValuesMixedSkippingIndex() throws Exception {
+    try (Directory dir = newDirectory()) {
+      try (IndexWriter writer =
+          new IndexWriter(dir, new IndexWriterConfig(new MockAnalyzer(random())))) {
+        Document doc1 = new Document();
+        doc1.add(SortedNumericDocValuesField.indexedField("test", random().nextLong()));
+        writer.addDocument(doc1);
+
+        Document doc2 = new Document();
+        doc2.add(new SortedNumericDocValuesField("test", random().nextLong()));
+        IllegalArgumentException ex =
+            expectThrows(IllegalArgumentException.class, () -> writer.addDocument(doc2));
+        ex.printStackTrace();
+        assertEquals(
+            "Inconsistency of field data structures across documents for field [test] of doc [1]. doc values skip index type: expected 'RANGE', but it has 'NONE'.",
+            ex.getMessage());
+      }
+    }
+    try (Directory dir = newDirectory()) {
+      try (IndexWriter writer =
+          new IndexWriter(dir, new IndexWriterConfig(new MockAnalyzer(random())))) {
+        Document doc1 = new Document();
+        doc1.add(new SortedSetDocValuesField("test", TestUtil.randomBinaryTerm(random())));
+        writer.addDocument(doc1);
+
+        Document doc2 = new Document();
+        doc2.add(SortedSetDocValuesField.indexedField("test", TestUtil.randomBinaryTerm(random())));
+        IllegalArgumentException ex =
+            expectThrows(IllegalArgumentException.class, () -> writer.addDocument(doc2));
+        assertEquals(
+            "Inconsistency of field data structures across documents for field [test] of doc [1]. doc values skip index type: expected 'NONE', but it has 'RANGE'.",
+            ex.getMessage());
+      }
+    }
+  }
+
+  public void testDocValuesSkippingIndexWithoutDocValues() throws Exception {
+    for (DocValuesType docValuesType :
+        new DocValuesType[] {DocValuesType.NONE, DocValuesType.BINARY}) {
+      FieldType fieldType = new FieldType();
+      fieldType.setStored(true);
+      fieldType.setDocValuesType(docValuesType);
+      fieldType.setDocValuesSkipIndexType(DocValuesSkipIndexType.RANGE);
+      fieldType.freeze();
+      try (Directory dir = newMockDirectory()) {
+        try (IndexWriter writer =
+            new IndexWriter(dir, new IndexWriterConfig(new MockAnalyzer(random())))) {
+          Document doc1 = new Document();
+          doc1.add(new Field("test", new byte[10], fieldType));
+          IllegalArgumentException ex =
+              expectThrows(IllegalArgumentException.class, () -> writer.addDocument(doc1));
+          assertTrue(
+              ex.getMessage().startsWith("field 'test' cannot have docValuesSkipIndexType=RANGE"));
+        }
+      }
+    }
   }
 }
